Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids_MO_Cart_to_SphBasis: Add u^0

--- a/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids_MO_Cart_to_SphBasis.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids_MO_Cart_to_SphBasis.ipynb
@@ -496,7 +496,8 @@
     "                              \"cctk_lsh[0]-cctk_nghostzones[0]\"],\\\n",
     "                             [\"1\",\"1\",\"1\"],\\\n",
     "                             [\"#pragma omp parallel for\",\"\",\"\"],\"   \",\n",
-    "                             \"\"\"const double Cartx = x[CCTK_GFINDEX3D(cctkGH,i0,i1,i2)];\n",
+    "                             \"\"\"\n",
+    "const double Cartx = x[CCTK_GFINDEX3D(cctkGH,i0,i1,i2)];\n",
     "const double Carty = y[CCTK_GFINDEX3D(cctkGH,i0,i1,i2)];\n",
     "const double Cartz = z[CCTK_GFINDEX3D(cctkGH,i0,i1,i2)];\n",
     "\n",
@@ -591,42 +592,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# alpha_dD= ixp.zerorank1()\n",
-    "# betaU   = ixp.zerorank1()\n",
-    "# IGMvU   = ixp.zerorank1()\n",
-    "# BU      = ixp.zerorank1()\n",
-    "# gammaDD = ixp.zerorank2()\n",
-    "# betaU_dD= ixp.zerorank2()\n",
-    "# gammaDD_dD = ixp.zerorank3()\n",
-    "# for i in range(DIM):\n",
-    "#     for j in range(DIM):\n",
-    "#         Jac_dUrfm_dDCartUD[i][j] = sp.simplify(Jac_dUrfm_dDCartUD[i][j])\n",
-    "#         betaU[i] += Jac_dUrfm_dDCartUD[i][j] * betaCartU[j]\n",
-    "#         BU[i]    += Jac_dUrfm_dDCartUD[i][j] * BCartU[j]\n",
-    "#         IGMvU[i] += Jac_dUrfm_dDCartUD[i][j] * IGMvCartU[j]\n",
-    "        \n",
-    "#         alpha_dD[i] += Jac_dUCart_dDrfmUD[j][i] * alphaCart_dD[j]\n",
-    "\n",
-    "#         for k in range(DIM):\n",
-    "#             for l in range(DIM):\n",
-    "#                 gammaDD[i][j] += Jac_dUCart_dDrfmUD[k][i]*Jac_dUCart_dDrfmUD[l][j] * gammaCartDD[k][l]\n",
-    "                \n",
-    "#                 betaU_dD[i][j] += Jac_dUrfm_dDCartUD[i][k] *Jac_dUCart_dDrfmUD[l][j] * betaCartU_dD[k][l]\n",
-    "\n",
-    "#                 for m in range(DIM):\n",
-    "#                     for n in range(DIM):\n",
-    "#                         gammaDD_dD[i][j][k] += \\\n",
-    "#                         Jac_dUCart_dDrfmUD[l][i]*Jac_dUCart_dDrfmUD[m][j]*Jac_dUCart_dDrfmUD[n][k] * \\\n",
-    "#                              gammaCartDD_dD[l][m][n]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -642,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,6 +619,11 @@
     "    for j in range(DIM):\n",
     "        v_dot_v += gammaDD[i][j]*ValenciavU[i]*ValenciavU[j]\n",
     "\n",
+    "u4Uzero = sp.sqrt(1/(1 - v_dot_v))/alpha # u^0 = LorentzGamma/alpha\n",
+    "gf_interp_list.append(gf_interp(\"u^0: zero (time) component of 4-velocity\"))\n",
+    "interp_expr = u4Uzero\n",
+    "which_InterpCounter = interp_fileout(which_InterpCounter,interp_expr,NRPyoutfilename)\n",
+    "        \n",
     "Gamma_times_ValenciavU = ixp.zerorank1()\n",
     "for i in range(DIM):\n",
     "    Gamma_times_ValenciavU[i] = sp.sqrt(1/(1 - v_dot_v))*ValenciavU[i]\n",
@@ -705,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -769,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -822,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,7 +818,7 @@
    "metadata": {},
    "source": [
     "<a id='NRPy4Christoffels'></a>\n",
-    "### Compute all 40 4-Christoffels $\\Gamma^{\\mu}_{\\nu\\delta}$ in Spherical coordinates\\[Back to [top](#top)\\]\n",
+    "### Compute all 40 4-Christoffels $\\Gamma^{\\mu}_{\\nu\\delta}$ in the Spherical basis \\[Back to [top](#top)\\]\n",
     "\n",
     "As explained in [Eq. 3.15 of Carroll's lecture notes on GR](https://ned.ipac.caltech.edu/level5/March01/Carroll3/Carroll3.html), while connection coefficients (a.k.a. Christoffel symbols) are not tensors, differences in connection coefficients are tensors.\n",
     "\n",
@@ -908,14 +878,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "calling reference_metric()...\n",
+      "about to compute ghatDDdD...\n",
+      "Finished computing ghatDDdD...\n",
+      "Finished calling reference_metric()...\n"
+     ]
+    }
+   ],
    "source": [
     "import reference_metric as rfm\n",
     "# Set the desired *output* coordinate system to Spherical:\n",
+    "#par.set_parval_from_str(\"reference_metric::CoordSystem\",\"NobleSphericalThetaOptionOne\")\n",
     "par.set_parval_from_str(\"reference_metric::CoordSystem\",\"Spherical\")\n",
+    "print(\"calling reference_metric()...\")\n",
     "rfm.reference_metric()\n",
+    "print(\"Finished calling reference_metric()...\")\n",
     "\n",
     "\n",
     "g4hatDD = ixp.zerorank2(DIM=4)\n",
@@ -941,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1079,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1111,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1160,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1236,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1260,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1270,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1356,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1387,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1444,7 +1428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1582,7 +1566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
