--- a/Tutorial-ADM_Initial_Data-Converting_Exact_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb
+++ b/Tutorial-ADM_Initial_Data-Converting_Exact_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb
@@ -5,10 +5,13 @@
    "metadata": {},
    "source": [
     "# Converting *Exact* ADM Initial Data in the Spherical or Cartesian Basis to BSSN Initial Data in the Desired Curvilinear Basis\n",
+    "## Author: Zach Etienne, with formatting improvements courtesy Brandon Clark\n",
     "\n",
     "### NRPy+ Source Code for this module: [BSSN/ADM_Exact_Spherical_or_Cartesian_to_BSSNCurvilinear.py](../edit/BSSN/ADM_Exact_Spherical_or_Cartesian_to_BSSNCurvilinear.py)\n",
     "\n",
     "**This module is meant for use only with initial data that can be represented exactly in ADM form, either in the Spherical or Cartesian basis. I.e., the ADM variables are given $\\left\\{\\gamma_{ij}, K_{ij}, \\alpha, \\beta^i\\right\\}$ *exactly* as functions of $(r,\\theta,\\phi)$ or $(x,y,z)$, respectively. If instead the initial data are given only numerically (e.g., through an initial data solver), then [the Numerical-ADM-Spherical/Cartesian-to-BSSNCurvilinear module](Tutorial-ADM_Initial_Data-Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb) will need to be used instead.** \n",
+    "\n",
+    "## Introduction:\n",
     "\n",
     "Given the ADM variables:\n",
     "\n",
@@ -29,7 +32,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 0: Set up NRPy+, with UIUC Black Hole initial data, and desired output BSSN Curvilinear coordinate system set to Cylindrical, as a proof-of-principle"
+    "# Table of Contents\n",
+    "$$\\label{toc}$$ \n",
+    "\n",
+    "The module is organized as follows:\n",
+    "\n",
+    "1. [Step 1](#initializenrpy): Initialize core Python/NRPy+ modules\n",
+    "1. [Step 2](#cylindrical): Desired output BSSN Curvilinear coordinate system set to Cylindrical, as a proof-of-principle\n",
+    "1. [Step 3](#admfunc): Converting ADM variables to functions of $(xx0,xx1,xx2)$\n",
+    "1. [Step 4](#adm_jacobian): Applying Jacobian transformations to get in the correct $xx0,xx1,xx2$ basis\n",
+    "1. [Step 5](#adm2bssn): Perform the ADM-to-BSSN conversion for 3-metric, extrinsic curvature, and gauge quantities\n",
+    "    1. [Step 5a](#adm2bssn_gamma): Convert ADM $\\gamma_{ij}$ to BSSN $\\bar{\\gamma}_{ij}$\n",
+    "    1. [Step 5b](#admexcurv_convert): Convert the ADM extrinsic curvature $K_{ij}$\n",
+    "    1. [Step 5c](#lambda): Define $\\bar{\\Lambda}^i$\n",
+    "    1. [Step 5d](#conformal): Define the conformal factor variable $\\texttt{cf}$\n",
+    "1. [Step 6](#rescale): Rescale tensorial quantities\n",
+    "1. [Step 7](#code_validation): Code Validation against BSSN.ADM_Exact_Spherical_or_Cartesian_to_BSSNCurvilinear module\n",
+    "1. [Step 8](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='initializenrpy'></a>\n",
+    "\n",
+    "# Step 1: Initialize core Python/NRPy+ modules \\[Back to [top](#toc)\\]\n",
+    "$$\\label{initializenrpy}$$\n"
    ]
   },
   {
@@ -38,19 +67,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step P1: Import needed modules\n",
+    "# Step 1: Import needed modules\n",
     "import sympy as sp\n",
     "import NRPy_param_funcs as par\n",
     "from outputC import *\n",
     "import indexedexp as ixp\n",
     "import reference_metric as rfm\n",
     "import BSSN.UIUCBlackHole as uibh\n",
-    "import BSSN.BSSN_quantities as Bq # The EvolvedConformalFactor_cf parameter is used below\n",
+    "import BSSN.BSSN_quantities as Bq # The EvolvedConformalFactor_cf parameter is used below"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='cylindrical'></a>\n",
+    "\n",
+    "# Step 2: Desired output BSSN Curvilinear coordinate system set to Cylindrical, as a proof-of-principle \\[Back to [top](#toc)\\]\n",
+    "$$\\label{cylindrical}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 2: Desired output BSSN Curvilinear coordinate system set to Cylindrical, as a proof-of-principle\n",
     "\n",
     "# The ADM & BSSN formalisms only work in 3D; they are 3+1 decompositions of Einstein's equations.\n",
     "#    To implement axisymmetry or spherical symmetry, simply set all spatial derivatives in\n",
     "#    the relevant angular directions to zero; DO NOT SET DIM TO ANYTHING BUT 3.\n",
-    "# Step 0: Set spatial dimension (must be 3 for BSSN)\n",
+    "\n",
+    "# Step P0: Set spatial dimension (must be 3 for BSSN)\n",
     "DIM = 3\n",
     "\n",
     "# Set the desired *output* coordinate system to Cylindrical:\n",
@@ -71,20 +120,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 1: ADM variables are given as functions of $(r,\\theta,\\phi)$ or $(x,y,z)$. Convert to functions of $(xx0,xx1,xx2)$ using SymPy's \"subs()\" function:"
+    "<a id='admfunc'></a>\n",
+    "\n",
+    "# Step 3: Converting ADM variables to functions of $(xx0,xx1,xx2)$ \\[Back to [top](#toc)\\]\n",
+    "$$\\label{admfunc}$$\n",
+    "\n",
+    "ADM variables are given as functions of $(r,\\theta,\\phi)$ or $(x,y,z)$. We convert them to functions of $(xx0,xx1,xx2)$ using SymPy's `subs()` function."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 1: All input quantities are in terms of r,th,ph or x,y,z. We want them in terms \n",
-    "#         of xx0,xx1,xx2, so here we call sympify_integers__replace_rthph() to replace\n",
-    "#         r,th,ph or x,y,z, respectively, with the appropriate functions of xx0,xx1,xx2\n",
-    "#         as defined for this particular reference metric in reference_metric.py's \n",
-    "#         xxSph[] or xxCart[], respectively:\n",
+    "# Step 3: Converting ADM variables to functions of $(xx0,xx1,xx2)$\n",
+    "\n",
+    "#     All input quantities are in terms of r,th,ph or x,y,z. We want them in terms \n",
+    "#     of xx0,xx1,xx2, so here we call sympify_integers__replace_rthph() to replace\n",
+    "#     r,th,ph or x,y,z, respectively, with the appropriate functions of xx0,xx1,xx2\n",
+    "#     as defined for this particular reference metric in reference_metric.py's \n",
+    "#     xxSph[] or xxCart[], respectively:\n",
     "\n",
     "# UIUC Black Hole initial data are given in Spherical coordinates.\n",
     "CoordType_in = \"Spherical\"\n",
@@ -133,9 +189,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 2: All ADM initial data quantities are now functions of xx0,xx1,xx2, but they are still in the Spherical or Cartesian basis. We can now directly apply Jacobian transformations to get them in the correct xx0,xx1,xx2 basis:\n",
+    "<a id='adm_jacobian'></a>\n",
     "\n",
-    "The following discussion holds for either Spherical or Cartesian input data, so for simplicity let's just assume the data are given in Spherical coordinates.\n",
+    "# Step 4:  Applying Jacobian transformations to get in the correct $xx0,xx1,xx2$ basis \\[Back to [top](#toc)\\]\n",
+    "$$\\label{adm_jacobian}$$\n",
+    "\n",
+    "All ADM initial data quantities are now functions of xx0,xx1,xx2, but they are still in the Spherical or Cartesian basis. We can now directly apply Jacobian transformations to get them in the correct xx0,xx1,xx2 basis. The following discussion holds for either Spherical or Cartesian input data, so for simplicity let's just assume the data are given in Spherical coordinates.\n",
     "\n",
     "All ADM tensors and vectors are in the Spherical coordinate basis $x^i_{\\rm Sph} = (r,\\theta,\\phi)$, but we need them in the curvilinear coordinate basis $x^i_{\\rm rfm}= ({\\rm xx0},{\\rm xx1},{\\rm xx2})$ set by the \"reference_metric::CoordSystem\" variable. Empirically speaking, it is far easier to write $(x({\\rm xx0},{\\rm xx1},{\\rm xx2}),y({\\rm xx0},{\\rm xx1},{\\rm xx2}),z({\\rm xx0},{\\rm xx1},{\\rm xx2}))$ than the inverse, so we will compute the Jacobian matrix\n",
     "\n",
@@ -164,10 +223,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Step 4:  Applying Jacobian transformations to get in the correct $xx0,xx1,xx2$ basis\n",
+    "\n",
     "# alpha is a scalar, so no Jacobian transformation is necessary.\n",
     "alpha = alphaSphorCart\n",
     "\n",
@@ -196,11 +257,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 3: Perform the ADM-to-BSSN conversion\n",
+    "<a id='adm2bssn'></a>\n",
     "\n",
-    "All ADM quantities were input into this function in the Spherical or Cartesian basis, as functions of r,th,ph or x,y,z, respectively. In Steps 1 and 2 above, we converted them to the xx0,xx1,xx2 basis, and as functions of xx0,xx1,xx2. Here we convert ADM quantities to their BSSN Curvilinear counterparts.\n",
     "\n",
-    "### Step 3.1: Convert ADM $\\gamma_{ij}$ to BSSN $\\bar{\\gamma}_{ij}$:\n",
+    "# Step 5: Perform the ADM-to-BSSN conversion for 3-metric, extrinsic curvature, and gauge quantities \\[Back to [top](#toc)\\]\n",
+    "$$\\label{adm2bssn}$$\n",
+    "\n",
+    "All ADM quantities were input into this function in the Spherical or Cartesian basis, as functions of r,th,ph or x,y,z, respectively. In Steps 3 and 4 above, we converted them to the xx0,xx1,xx2 basis, and as functions of xx0,xx1,xx2. Here we convert ADM quantities to their BSSN Curvilinear counterparts.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='adm2bssn_gamma'></a>\n",
+    "\n",
+    "## Step 5a: Convert ADM $\\gamma_{ij}$ to BSSN $\\bar{\\gamma}_{ij}$ \\[Back to [top](#toc)\\]\n",
+    "$$\\label{adm2bssn_gamma}$$\n",
     "\n",
     "We have (Eqs. 2 and 3 of [Ruchlin *et al.*](https://arxiv.org/pdf/1712.07658.pdf)):\n",
     "$$\n",
@@ -211,10 +285,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Step 5a: Convert ADM $\\gamma_{ij}$ to BSSN $\\bar{\\gamma}_{ij}$\n",
+    "\n",
     "gammaUU, gammaDET = ixp.symm_matrix_inverter3x3(gammaDD)\n",
     "gammabarDD = ixp.zerorank2()\n",
     "for i in range(DIM):\n",
@@ -226,8 +302,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 3.2: Convert the ADM extrinsic curvature $K_{ij}$ to the trace-free extrinsic curvature $\\bar{A}_{ij}$, plus the trace of the extrinsic curvature $K$, where (Eq. 3 of [Baumgarte *et al.*](https://arxiv.org/pdf/1211.6632.pdf)):\n",
+    "<a id='admexcurv_convert'></a>\n",
     "\n",
+    "## Step 5b: Convert the ADM extrinsic curvature $K_{ij}$ \\[Back to [top](#toc)\\]\n",
+    "$$\\label{admexcurv_convert}$$\n",
+    "\n",
+    "Convert the ADM extrinsic curvature $K_{ij}$ to the trace-free extrinsic curvature $\\bar{A}_{ij}$, plus the trace of the extrinsic curvature $K$, where (Eq. 3 of [Baumgarte *et al.*](https://arxiv.org/pdf/1211.6632.pdf)):\n",
     "\\begin{align}\n",
     "K &= \\gamma^{ij} K_{ij} \\\\\n",
     "\\bar{A}_{ij} &= \\left(\\frac{\\bar{\\gamma}}{\\gamma}\\right)^{1/3} \\left(K_{ij} - \\frac{1}{3} \\gamma_{ij} K \\right)\n",
@@ -236,10 +316,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Step 5b: Convert the ADM extrinsic curvature $K_{ij}$\n",
+    "\n",
     "trK = sp.sympify(0)\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
@@ -255,21 +337,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 3.3: Define $\\bar{\\Lambda}^i$ (Eqs. 4 and 5 of [Baumgarte *et al.*](https://arxiv.org/pdf/1211.6632.pdf)):\n",
+    "<a id='lambda'></a>\n",
     "\n",
+    "## Step 5c: Define $\\bar{\\Lambda}^i$ \\[Back to [top](#toc)\\]\n",
+    "$$\\label{lambda}$$\n",
+    "\n",
+    "To define $\\bar{\\Lambda}^i$ we implement Eqs. 4 and 5 of [Baumgarte *et al.*](https://arxiv.org/pdf/1211.6632.pdf):\n",
     "$$\n",
     "\\bar{\\Lambda}^i = \\bar{\\gamma}^{jk}\\left(\\bar{\\Gamma}^i_{jk} - \\hat{\\Gamma}^i_{jk}\\right).\n",
     "$$\n",
     "\n",
-    "The reference_metric.py module provides us with analytic expressions for $\\hat{\\Gamma}^i_{jk}$, so here we need only compute analytical expressions for $\\bar{\\Gamma}^i_{jk}$, based on the exact values provided in the initial data:"
+    "The [reference_metric.py](../edit/reference_metric.py) module provides us with analytic expressions for $\\hat{\\Gamma}^i_{jk}$, so here we need only compute analytical expressions for $\\bar{\\Gamma}^i_{jk}$, based on the exact values provided in the initial data:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Step 5c: Define $\\bar{\\Lambda}^i$\n",
+    "\n",
     "# To compute \\bar{\\Gamma}^i_{jk}, we'll need \\bar{\\gamma}^{ij} first:\n",
     "gammabarUU, gammabarDET = ixp.symm_matrix_inverter3x3(gammabarDD)\n",
     "\n",
@@ -295,7 +383,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 3.4: Define the conformal factor variable $\\texttt{cf}$, based on the setting of the \"BSSN_quantities::EvolvedConformalFactor_cf\" parameter.\n",
+    "<a id='conformal'></a>\n",
+    "\n",
+    "## Step 5d: Define the conformal factor variable $\\texttt{cf}$ \\[Back to [top](#toc)\\]\n",
+    "$$\\label{conformal}$$\n",
+    "\n",
+    "We define the conformal factor variable $\\texttt{cf}$ based on the setting of the \"BSSN_quantities::EvolvedConformalFactor_cf\" parameter.\n",
     "\n",
     "For example if \"EvolvedConformalFactor_cf\" is set to \"phi\", we can use Eq. 3 of [Ruchlin *et al.*](https://arxiv.org/pdf/1712.07658.pdf), which in arbitrary coordinates is written:\n",
     "\n",
@@ -319,10 +412,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Step 5d: Define the conformal factor variable $\\texttt{cf}$\n",
+    "\n",
     "cf = sp.sympify(0)\n",
     "\n",
     "if par.parval_from_str(\"EvolvedConformalFactor_cf\") == \"phi\":\n",
@@ -340,8 +435,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 4: Rescale tensorial quantities according to the prescription described in the [BSSN in curvilinear coordinates tutorial module](Tutorial-BSSNCurvilinear.ipynb) (also [Ruchlin *et al.*](https://arxiv.org/pdf/1712.07658.pdf)):\n",
+    "<a id='rescale'></a>\n",
     "\n",
+    "# Step 6: Rescale tensorial quantities \\[Back to [top](#toc)\\]\n",
+    "$$\\label{rescale}$$\n",
+    "\n",
+    "We rescale tensorial quantities according to the prescription described in the [BSSN in curvilinear coordinates tutorial module](Tutorial-BSSNCurvilinear.ipynb) (also [Ruchlin *et al.*](https://arxiv.org/pdf/1712.07658.pdf)):\n",
     "\\begin{align}\n",
     "h_{ij} &= (\\bar{\\gamma}_{ij} - \\hat{\\gamma}_{ij})/\\text{ReDD[i][j]}\\\\\n",
     "a_{ij} &= \\bar{A}_{ij}/\\text{ReDD[i][j]}\\\\\n",
@@ -353,10 +452,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Step 6: Rescale tensorial quantities\n",
     "hDD     = ixp.zerorank2()\n",
     "aDD     = ixp.zerorank2()\n",
     "lambdaU = ixp.zerorank1()\n",
@@ -375,7 +475,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 5: Code Validation; Confirm that the output from this tutorial module agrees with the module [BSSN.ADM_Exact_Spherical_or_Cartesian_to_BSSNCurvilinear](../edit/BSSN/ADM_Exact_Spherical_or_Cartesian_to_BSSNCurvilinear.py)\n",
+    "<a id='code_validation'></a>\n",
+    "\n",
+    "# Step 7: Code Validation against BSSN.ADM_Exact_Spherical_or_Cartesian_to_BSSNCurvilinear module \\[Back to [top](#toc)\\] $$\\label{code_validation}$$\n",
     "\n",
     "Here, as a code validation check, we verify agreement in the SymPy expressions for BrillLindquist initial data between\n",
     "1. this tutorial and \n",
@@ -386,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -430,6 +532,8 @@
     }
    ],
    "source": [
+    "# Step 7: Code Validation against BSSN.ADM_Exact_Spherical_or_Cartesian_to_BSSNCurvilinear module\n",
+    "\n",
     "import BSSN.UIUCBlackHole as uibh\n",
     "import BSSN.ADM_Exact_Spherical_or_Cartesian_to_BSSNCurvilinear as ADMtoBSSN\n",
     "returnfunction = uibh.UIUCBlackHole()\n",
@@ -455,6 +559,50 @@
     "\n",
     "with open(\"BSSN/UIUCBlackHole-CylindricalTest.h\",\"w\") as file:\n",
     "    file.write(uibh.returnfunction)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='latex_pdf_output'></a>\n",
+    "\n",
+    "# Step 8: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "$$\\label{latex_pdf_output}$$\n",
+    "\n",
+    "Once the following code finishes running, the generated PDF may be found at the following location within the directory you have the NRPy+ tutorial saved:\n",
+    "[Tutorial-ADM_Initial_Data-Converting_Exact_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.pdf](Tutorial-ADM_Initial_Data-Converting_Exact_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.pdf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook Tutorial-ADM_Initial_Data-Converting_Exact_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb to latex\n",
+      "[NbConvertApp] Writing 67431 bytes to Tutorial-ADM_Initial_Data-Converting_Exact_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.tex\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx Tutorial-ADM_Initial_Data-Converting_Exact_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb\n",
+    "!pdflatex -interaction=batchmode Tutorial-ADM_Initial_Data-Converting_Exact_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-ADM_Initial_Data-Converting_Exact_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-ADM_Initial_Data-Converting_Exact_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.tex\n",
+    "!rm -f Tut*.out Tut*.aux Tut*.log"
    ]
   }
  ],
