Major update: Import Brandon Clark's formatting improvements!

--- a/Tutorial-ADM_Initial_Data-Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb
+++ b/Tutorial-ADM_Initial_Data-Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "# Converting *Numerical* ADM Initial Data in the Spherical or Cartesian Basis to BSSN Initial Data in the Desired Curvilinear Basis\n",
-    "## Author: Zach Etienne, with formatting improvements courtesy Brandon Clark\n",
+    "## Author: Zach Etienne\n",
+    "### Formatting improvements courtesy Brandon Clark\n",
     "\n",
     "### NRPy+ Source Code for this module: [BSSN/ADM_Numerical_Spherical_or_Cartesian_to_BSSNCurvilinearID.py](../edit/BSSN/ADM_Numerical_Spherical_or_Cartesian_to_BSSNCurvilinearID.py)\n",
     "\n",
@@ -20,24 +21,26 @@
     "\n",
     "$$\\left\\{\\bar{\\gamma}_{i j},\\bar{A}_{i j},\\phi, K, \\bar{\\Lambda}^{i}, \\alpha, \\beta^i, B^i\\right\\},$$ \n",
     "\n",
-    "in the desired curvilinear basis (given by reference_metric::CoordSystem). Then it rescales the resulting BSSNCurvilinear variables (as defined in [the covariant BSSN formulation tutorial](Tutorial-BSSN_formulation.ipynb)) into the form needed for solving Einstein's equations with the BSSN formulation:\n",
+    "in the desired curvilinear basis (given by reference_metric::CoordSystem). Then it rescales the resulting BSSNCurvilinear variables (as defined in [the BSSN Curvilinear tutorial](Tutorial-BSSNCurvilinear.ipynb)) into the form needed for BSSNCurvilinear evolutions:\n",
     "\n",
     "$$\\left\\{h_{i j},a_{i j},\\phi, K, \\lambda^{i}, \\alpha, \\mathcal{V}^i, \\mathcal{B}^i\\right\\}.$$ \n",
     "\n",
-    "We will use as our core example in this module UIUC initial data, which are ([as documented in their NRPy+ initial data module](Tutorial-ADM_Initial_Data-UIUC_BlackHole.ipynb)) given in terms of ADM variables in Spherical coordinates. Although these initial data are in fact *exact*, we demonstrate how, $\\bar{\\Lambda}^i$ can be computed numerically from provided ADM quantities."
+    "We will use as our core example in this module UIUC initial data, which are ([as documented in their NRPy+ initial data module](Tutorial-ADM_Initial_Data-UIUC_BlackHole.ipynb)) given in terms of ADM variables in Spherical coordinates."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc'></a>\n",
+    "\n",
     "# Table of Contents\n",
     "$$\\label{toc}$$ \n",
     "\n",
     "The module is organized as follows:\n",
     "\n",
     "1. [Step 1](#initializenrpy): Initialize core Python/NRPy+ modules\n",
-    "1. [Step 2](#nrpyparams): Set basic NRPy+ parameters\n",
+    "1. [Step 2](#cylindrical): Desired output BSSN Curvilinear coordinate system set to Cylindrical, as a proof-of-principle\n",
     "1. [Step 3](#admfunc): Setting ADM variables through initial data solver C function\n",
     "1. [Step 4](#adm_jacobian): Applying Jacobian transformations to get in the correct $xx0,xx1,xx2$ basis\n",
     "1. [Step 5](#adm2bssn): Perform the ADM-to-BSSN conversion for 3-metric, extrinsic curvature, and gauge quantities\n",
@@ -48,7 +51,7 @@
     "1. [Step 7](#adm2bssn_c): Output all ADM-to-BSSN expressions to a C function \n",
     "    1. [Step 7.a](#driver): Output the driver function for the above C function\n",
     "1. [Step 8](#lambda): Compute $\\bar{\\Lambda}^i$ from finite-difference derivatives of rescaled metric quantities\n",
-    "1. [Step 9](#code_validation): Code Validation against BSSN.ADM_Numerical_Spherical_or_Cartesian_to_BSSNCurvilinear module BSSN.ADM_Exact_Spherical_or_Cartesian_to_BSSNCurvilinear module\n",
+    "1. [Step 9](#code_validation): Code Validation against BSSN.ADM_Numerical_Spherical_or_Cartesian_to_BSSNCurvilinear NRPy+ module\n",
     "1. [Step 10](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF"
    ]
   },
@@ -84,12 +87,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='nrpyparams'></a>\n",
+    "<a id='cylindrical'></a>\n",
     "\n",
-    "# Step 2: Set basic NRPy+ parameters \\[Back to [top](#toc)\\]\n",
-    "$$\\label{nrpyparams}$$\n",
-    "\n",
-    "Here we set basic NRPy+ parameters, including setting the desired BSSN curvilinear coordinate system to Cylindrical."
+    "# Step 2: Desired output BSSN Curvilinear coordinate system set to Cylindrical, as a proof-of-principle \\[Back to [top](#toc)\\]\n",
+    "$$\\label{cylindrical}$$"
    ]
   },
   {
@@ -221,7 +222,7 @@
    "source": [
     "# Step 4:  Applying Jacobian transformations to get in the correct $xx0,xx1,xx2$ basis\n",
     "\n",
-    "# Step P0: All input quantities are in terms of r,th,ph or x,y,z. We want them in terms \n",
+    "# Step 4 P0: All input quantities are in terms of r,th,ph or x,y,z. We want them in terms \n",
     "#         of xx0,xx1,xx2, so here we call sympify_integers__replace_rthph() to replace\n",
     "#         r,th,ph or x,y,z, respectively, with the appropriate functions of xx0,xx1,xx2\n",
     "#         as defined for this particular reference metric in reference_metric.py's \n",
@@ -422,7 +423,7 @@
     "# Step 6: Rescale tensorial quantities \\[Back to [top](#toc)\\]\n",
     "$$\\label{rescale}$$\n",
     "\n",
-    "We rescale tensorial quantities according to the prescription described in the [the covariant BSSN formulation tutorial](Tutorial-BSSN_formulation.ipynb) (also [Ruchlin *et al.*](https://arxiv.org/pdf/1712.07658.pdf)):\n",
+    "We rescale tensorial quantities according to the prescription described in the [BSSN in curvilinear coordinates tutorial module](Tutorial-BSSNCurvilinear.ipynb) (also [Ruchlin *et al.*](https://arxiv.org/pdf/1712.07658.pdf)):\n",
     "\n",
     "\\begin{align}\n",
     "h_{ij} &= (\\bar{\\gamma}_{ij} - \\hat{\\gamma}_{ij})/\\text{ReDD[i][j]}\\\\\n",
@@ -660,7 +661,7 @@
    "source": [
     "<a id='code_validation'></a>\n",
     "\n",
-    "# Step 9: Code Validation against  BSSN.ADM_Numerical_Spherical_or_Cartesian_to_BSSNCurvilinear module \\[Back to [top](#toc)\\]\n",
+    "# Step 9: Code Validation against  BSSN.ADM_Numerical_Spherical_or_Cartesian_to_BSSNCurvilinear NRPy+ module \\[Back to [top](#toc)\\]\n",
     "$$\\label{code_validation}$$\n",
     "\n",
     "Here, as a code validation check, we verify agreement in the C codes for converting \"numerical\" UIUCBlackHole initial data (in Spherical coordinates/basis) to BSSN Curvilinear data in Cylindrical coordinates/basis between\n",
@@ -728,8 +729,8 @@
     "# Step 10: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
-    "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
-    "[Tutorial-ADM_Initial_Data-Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.pdf](Tutorial-ADM_Initial_Data-Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.pdf) (Note that clicking on this link may not work; you may need to open the PDF file through another means.)"
+    "Once the following code finishes running, the generated PDF may be found at the following location within the directory you have the NRPy+ tutorial saved:\n",
+    "[Tutorial-ADM_Initial_Data-Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.pdf](Tutorial-ADM_Initial_Data-Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.pdf)"
    ]
   },
   {
@@ -742,7 +743,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-ADM_Initial_Data-Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb to latex\n",
-      "[NbConvertApp] Writing 82773 bytes to Tutorial-ADM_Initial_Data-Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.tex\n",
+      "[NbConvertApp] Writing 86695 bytes to Tutorial-ADM_Initial_Data-Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
