--- a/Tutorial-BSSN_time_evolution-BSSN_RHSs.ipynb
+++ b/Tutorial-BSSN_time_evolution-BSSN_RHSs.ipynb
@@ -6,10 +6,12 @@
    "source": [
     "# The BSSN Time-Evolution Equations\n",
     "\n",
-    "### Author: Zach Etienne\n",
+    "## Author: Zach Etienne\n",
+    "### Formatting improvements courtesy Brandon Clark\n",
     "\n",
     "<font color='green'>**All expressions generated in this module have been validated against a trusted code (the original NRPy+/SENR code, which itself was validated against [Baumgarte's code](https://arxiv.org/abs/1211.6632)).**</font>\n",
     "\n",
+    "## Introduction:\n",
     "This module documents and constructs the time evolution equations of the BSSN formulation of Einstein's equations, as defined  in [Ruchlin, Etienne, and Baumgarte (2018)](https://arxiv.org/abs/1712.07658) (see also [Baumgarte, Montero, Cordero-Carrión, and Müller (2012)](https://arxiv.org/abs/1211.6632)). \n",
     "\n",
     "**This module is part of the following set of NRPy+ tutorial modules on the BSSN formulation of general relativity:**\n",
@@ -45,12 +47,25 @@
     "The module is organized as follows\n",
     "\n",
     "0. [Preliminaries](#bssntimeevolequations): BSSN time-evolution equations, as described in the [BSSN formulation NRPy+ tutorial module](Tutorial-BSSN_formulation.ipynb)\n",
-    "1. [Step 1](#initializenrpy): Initialize core NRPy+ modules\n",
+    "1. [Step 1](#initializenrpy): Initialize core Python/NRPy+ modules\n",
     "1. [Step 2](#gammabar): Right-hand side of $\\partial_t \\bar{\\gamma}_{ij}$\n",
+    "    1. [Step 2.a](#step2p1): Term 1 of $\\partial_t \\bar{\\gamma}_{i j}$\n",
+    "    1. [Step 2.b](#step2p2): Term 2 of $\\partial_t \\bar{\\gamma}_{i j}$\n",
+    "    1. [Step 2.c](#step2p3): Term 3 of $\\partial_t \\bar{\\gamma}_{i j}$\n",
     "1. [Step 3](#abar): Right-hand side of $\\partial_t \\bar{A}_{ij}$\n",
+    "    1. [Step 3.a](#step3p1): Term 1 of $\\partial_t \\bar{A}_{i j}$\n",
+    "    1. [Step 3.c](#step3p2): Term 2 of $\\partial_t \\bar{A}_{i j}$\n",
+    "    1. [Step 3.c](#step3p3): Term 3 of $\\partial_t \\bar{A}_{i j}$\n",
     "1. [Step 4](#cf): Right-hand side of $\\partial_t \\phi \\to \\partial_t (\\text{cf})$\n",
     "1. [Step 5](#trk): Right-hand side of $\\partial_t \\text{tr} K$\n",
     "1. [Step 6](#lambdabar): Right-hand side of $\\partial_t \\bar{\\Lambda}^i$\n",
+    "    1. [Step 6.a](#step6p1): Term 1 of $\\partial_t \\bar{\\Lambda}^i$\n",
+    "    1. [Step 6.b](#step6p2): Term 2 of $\\partial_t \\bar{\\Lambda}^i$\n",
+    "    1. [Step 6.c](#step6p3): Term 3 of $\\partial_t \\bar{\\Lambda}^i$\n",
+    "    1. [Step 6.d](#step6p4): Term 4 of $\\partial_t \\bar{\\Lambda}^i$\n",
+    "    1. [Step 6.e](#step6p5): Term 5 of $\\partial_t \\bar{\\Lambda}^i$\n",
+    "    1. [Step 6.f](#step6p6): Term 6 of $\\partial_t \\bar{\\Lambda}^i$\n",
+    "    1. [Step 6.g](#step6p7): Term 7 of $\\partial_t \\bar{\\Lambda}^i$\n",
     "1. [Step 7](#rescalingrhss): Rescaling the BSSN right-hand sides; rewriting them in terms of the rescaled quantities $\\left\\{h_{i j},a_{i j},\\text{cf}, K, \\lambda^{i}, \\alpha, \\mathcal{V}^i, \\mathcal{B}^i\\right\\}$\n",
     "1. [Step 8](#code_validation): Code Validation against BSSN.BSSN_RHSs NRPy+ module\n",
     "1. [Step 9](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF"
@@ -99,7 +114,7 @@
    "source": [
     "<a id='initializenrpy'></a>\n",
     "\n",
-    "# Step 1: Initialize core NRPy+ modules \\[Back to [top](#toc)\\]\n",
+    "# Step 1: Initialize core Python/NRPy+ modules \\[Back to [top](#toc)\\]\n",
     "$$\\label{initializenrpy}$$\n",
     "\n",
     "Let's start by importing all the needed modules from NRPy+:"
@@ -111,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 1.a: import all needed modules from NRPy+:\n",
+    "# Step 1.a: import all needed modules from Python/NRPy+:\n",
     "import sympy as sp\n",
     "import NRPy_param_funcs as par\n",
     "import indexedexp as ixp\n",
@@ -167,9 +182,20 @@
     "{\\underbrace {\\textstyle \\left[\\beta^k \\partial_k \\bar{\\gamma}_{ij} + \\partial_i \\beta^k \\bar{\\gamma}_{kj} + \\partial_j \\beta^k \\bar{\\gamma}_{ik} \\right]}_{\\text{Term 1}}} + \n",
     "{\\underbrace {\\textstyle \\frac{2}{3} \\bar{\\gamma}_{i j} \\left (\\alpha \\bar{A}_{k}^{k} - \\bar{D}_{k} \\beta^{k}\\right )}_{\\text{Term 2}}}\n",
     "{\\underbrace {\\textstyle -2 \\alpha \\bar{A}_{i j}}_{\\text{Term 3}}}.\n",
-    "$$\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='step2p1'></a>\n",
     "\n",
-    "## Step 2.a: Term 1 of $\\partial_t \\bar{\\gamma}_{i j} =$ gammabar_rhsDD\\[i\\]\\[j\\]: $\\beta^k \\bar{\\gamma}_{ij,k} + \\beta^k_{,i} \\bar{\\gamma}_{kj} + \\beta^k_{,j} \\bar{\\gamma}_{ik}$\n",
+    "## Step 2.a: Term 1 of $\\partial_t \\bar{\\gamma}_{i j}$  \\[Back to [top](#toc)\\] \n",
+    "$$\\label{step2p1}$$\n",
+    "\n",
+    "Term 1 of $\\partial_t \\bar{\\gamma}_{i j} =$ `gammabar_rhsDD[i][j]`: $\\beta^k \\bar{\\gamma}_{ij,k} + \\beta^k_{,i} \\bar{\\gamma}_{kj} + \\beta^k_{,j} \\bar{\\gamma}_{ik}$\n",
+    "\n",
     "\n",
     "First we import derivative expressions for betaU defined in the [NRPy+ BSSN quantities tutorial module](Tutorial-BSSN_quantities.ipynb)"
    ]
@@ -203,7 +229,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 2.b: Term 2 of $\\partial_t \\bar{\\gamma}_{i j} =$ gammabar_rhsDD\\[i\\]\\[j\\]: $\\frac{2}{3} \\bar{\\gamma}_{i j} \\left (\\alpha \\bar{A}_{k}^{k} - \\bar{D}_{k} \\beta^{k}\\right )$\n",
+    "<a id='step2p2'></a>\n",
+    "\n",
+    "## Step 2.b: Term 2 of $\\partial_t \\bar{\\gamma}_{i j}$ \\[Back to [top](#toc)\\]\n",
+    "$$\\label{step2p2}$$\n",
+    "\n",
+    "Term 2 of $\\partial_t \\bar{\\gamma}_{i j} =$ `gammabar_rhsDD[i][j]`: $\\frac{2}{3} \\bar{\\gamma}_{i j} \\left (\\alpha \\bar{A}_{k}^{k} - \\bar{D}_{k} \\beta^{k}\\right )$\n",
     "\n",
     "Let's first convert this expression to be in terms of the evolved variables $a_{ij}$ and $\\mathcal{B}^i$, starting with $\\bar{A}_{ij} = a_{ij} \\text{ReDD[i][j]}$. Then $\\bar{A}^k_{k} = \\bar{\\gamma}^{ij} \\bar{A}_{ij}$, and we have already defined $\\bar{\\gamma}^{ij}$ in terms of the evolved quantity $h_{ij}$.\n",
     "\n",
@@ -249,7 +280,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 2.c: Term 3 of $\\partial_t \\bar{\\gamma}_{i j} =$ gammabar_rhsDD\\[i\\]\\[j\\]: $-2 \\alpha \\bar{A}_{ij}$"
+    "<a id='step2p3'></a>\n",
+    "\n",
+    "## Step 2.c: Term 3 of $\\partial_t \\bar{\\gamma}_{i j}$ \\[Back to [top](#toc)\\] \n",
+    "$$\\label{step2p3}$$\n",
+    "\n",
+    "Term 3 of $\\partial_t \\bar{\\gamma}_{i j}$ = `gammabar_rhsDD[i][j]`: $-2 \\alpha \\bar{A}_{ij}$\n"
    ]
   },
   {
@@ -277,9 +313,20 @@
     "$$\\partial_t \\bar{A}_{i j} = \n",
     "{\\underbrace {\\textstyle \\left[\\beta^k \\partial_k \\bar{A}_{ij} + \\partial_i \\beta^k \\bar{A}_{kj} + \\partial_j \\beta^k \\bar{A}_{ik} \\right]}_{\\text{Term 1}}}\n",
     "{\\underbrace {\\textstyle - \\frac{2}{3} \\bar{A}_{i j} \\bar{D}_{k} \\beta^{k} - 2 \\alpha \\bar{A}_{i k} {\\bar{A}^{k}}_{j} + \\alpha \\bar{A}_{i j} K}_{\\text{Term 2}}} + \n",
-    "{\\underbrace {\\textstyle e^{-4 \\phi} \\left \\{-2 \\alpha \\bar{D}_{i} \\bar{D}_{j} \\phi + 4 \\alpha \\bar{D}_{i} \\phi \\bar{D}_{j} \\phi  + 4 \\bar{D}_{(i} \\alpha \\bar{D}_{j)} \\phi - \\bar{D}_{i} \\bar{D}_{j} \\alpha + \\alpha \\bar{R}_{i j} \\right \\}^{\\text{TF}}}_{\\text{Term 3}}}$$\n",
+    "{\\underbrace {\\textstyle e^{-4 \\phi} \\left \\{-2 \\alpha \\bar{D}_{i} \\bar{D}_{j} \\phi + 4 \\alpha \\bar{D}_{i} \\phi \\bar{D}_{j} \\phi  + 4 \\bar{D}_{(i} \\alpha \\bar{D}_{j)} \\phi - \\bar{D}_{i} \\bar{D}_{j} \\alpha + \\alpha \\bar{R}_{i j} \\right \\}^{\\text{TF}}}_{\\text{Term 3}}}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='step3p1'></a>\n",
     "\n",
-    "## Step 3.a: Term 1 of $\\partial_t \\bar{A}_{i j}$ = Abar_rhsDD\\[i\\]\\[j\\]: $\\left[\\beta^k \\partial_k \\bar{A}_{ij} + \\partial_i \\beta^k \\bar{A}_{kj} + \\partial_j \\beta^k \\bar{A}_{ik} \\right]$\n",
+    "## Step 3.a: Term 1 of $\\partial_t \\bar{A}_{i j}$ \\[Back to [top](#toc)\\]\n",
+    "$$\\label{step3p1}$$\n",
+    "\n",
+    "Term 1 of $\\partial_t \\bar{A}_{i j}$ = `Abar_rhsDD[i][j]`: $\\left[\\beta^k \\partial_k \\bar{A}_{ij} + \\partial_i \\beta^k \\bar{A}_{kj} + \\partial_j \\beta^k \\bar{A}_{ik} \\right]$\n",
+    "\n",
     "\n",
     "Notice the first subexpression has a $\\beta^k \\partial_k A_{ij}$ advection term, which will be upwinded."
    ]
@@ -307,7 +354,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 3.b: Term 2 of $\\partial_t \\bar{A}_{i j}$ = Abar_rhsDD\\[i\\]\\[j\\]: $- \\frac{2}{3} \\bar{A}_{i j} \\bar{D}_{k} \\beta^{k} - 2 \\alpha \\bar{A}_{i k} \\bar{A}^{k}_{j} + \\alpha \\bar{A}_{i j} K$\n",
+    "<a id='step3p2'></a>\n",
+    "\n",
+    "## Step 3.b: Term 2 of $\\partial_t \\bar{A}_{i j}$ \\[Back to [top](#toc)\\]\n",
+    "$$\\label{step3p2}$$\n",
+    "\n",
+    "Term 2 of $\\partial_t \\bar{A}_{i j}$ = `Abar_rhsDD[i][j]`: $- \\frac{2}{3} \\bar{A}_{i j} \\bar{D}_{k} \\beta^{k} - 2 \\alpha \\bar{A}_{i k} \\bar{A}^{k}_{j} + \\alpha \\bar{A}_{i j} K$\n",
+    "\n",
     "\n",
     "Note that $\\bar{D}_{k} \\beta^{k}$ was already defined as \"Dbarbetacontraction\"."
    ]
@@ -333,7 +386,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 3.c: Term 3 of $\\partial_t \\bar{A}_{i j}$ = Abar_rhsDD\\[i\\]\\[j\\]: $e^{-4 \\phi} \\left \\{-2 \\alpha \\bar{D}_{i} \\bar{D}_{j} \\phi + 4 \\alpha \\bar{D}_{i} \\phi \\bar{D}_{j} \\phi  + 4 \\bar{D}_{(i} \\alpha \\bar{D}_{j)} \\phi - \\bar{D}_{i} \\bar{D}_{j} \\alpha + \\alpha \\bar{R}_{i j} \\right \\}^{\\text{TF}}$"
+    "<a id='step3p3'></a>\n",
+    "\n",
+    "## Step 3.c: Term 3 of $\\partial_t \\bar{A}_{i j}$ \\[Back to [top](#toc)\\]\n",
+    "Term 3 of $\\partial_t \\bar{A}_{i j}$ = `Abar_rhsDD[i][j]`: $e^{-4 \\phi} \\left \\{-2 \\alpha \\bar{D}_{i} \\bar{D}_{j} \\phi + 4 \\alpha \\bar{D}_{i} \\phi \\bar{D}_{j} \\phi  + 4 \\bar{D}_{(i} \\alpha \\bar{D}_{j)} \\phi - \\bar{D}_{i} \\bar{D}_{j} \\alpha + \\alpha \\bar{R}_{i j} \\right \\}^{\\text{TF}}$ \n",
+    "$$\\label{step3p3}$$"
    ]
   },
   {
@@ -521,7 +578,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 6.a: Term 1 of  $\\partial_t \\bar{\\Lambda}^{i}$: $\\beta^k \\partial_k \\bar{\\Lambda}^i - \\partial_k \\beta^i \\bar{\\Lambda}^k$\n",
+    "<a id='step6p1'></a>\n",
+    "\n",
+    "## Step 6.a: Term 1 of  $\\partial_t \\bar{\\Lambda}^{i}$ \\[Back to [top](#toc)\\]\n",
+    "$$\\label{step6p1}\n",
+    "\n",
+    "Term 1 of  $\\partial_t \\bar{\\Lambda}^{i}$: $\\beta^k \\partial_k \\bar{\\Lambda}^i - \\partial_k \\beta^i \\bar{\\Lambda}^k$\n",
     "\n",
     "Computing this term requires that we define $\\bar{\\Lambda}^i$ and $\\bar{\\Lambda}^i_{,j}$ in terms of the rescaled (i.e., actual evolved) variable $\\lambda^i$ and derivatives: \n",
     "\\begin{align}\n",
@@ -563,7 +625,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 6.b: Term 2 of $\\partial_t \\bar{\\Lambda}^{i}$: $\\bar{\\gamma}^{j k} \\hat{D}_{j} \\hat{D}_{k} \\beta^{i}$\n",
+    "<a id='step6p2'></a>\n",
+    "\n",
+    "## Step 6.b: Term 2 of $\\partial_t \\bar{\\Lambda}^{i}$ \\[Back to [top](#toc)\\]\n",
+    "$$\\label{step6p2}$$\n",
+    "\n",
+    "Term 2 of $\\partial_t \\bar{\\Lambda}^{i}$: $\\bar{\\gamma}^{j k} \\hat{D}_{j} \\hat{D}_{k} \\beta^{i}$\n",
     "\n",
     "This is a relatively difficult term to compute, as it requires we evaluate the second covariant derivative of the shift vector, with respect to the hatted (i.e., reference) metric.\n",
     "\n",
@@ -641,8 +708,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 6.c: Term 3 of  $\\partial_t \\bar{\\Lambda}^{i}$: $\\frac{2}{3} \\Delta^{i} \\bar{D}_{j} \\beta^{j}$\n",
+    "<a id='step6p3'></a>\n",
     "\n",
+    "## Step 6.c: Term 3 of  $\\partial_t \\bar{\\Lambda}^{i}$: $\\frac{2}{3} \\Delta^{i} \\bar{D}_{j} \\beta^{j}$ \\[Back to [top](#toc)\\]\n",
+    "$$\\label{step6p3}$$\n",
+    "\n",
+    "Term 3 of $\\partial_t \\bar{\\Lambda}^{i}$: $\\frac{2}{3} \\Delta^{i} \\bar{D}_{j} \\beta^{j}$\n",
+    " \n",
     "This term is the simplest to implement, as $\\bar{D}_{j} \\beta^{j}$ and $\\Delta^i$ have already been defined, as Dbarbetacontraction and DGammaU\\[i\\], respectively:"
    ]
   },
@@ -663,7 +735,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 6.d: Term 4 of  $\\partial_t \\bar{\\Lambda}^{i}$: $\\frac{1}{3} \\bar{D}^{i} \\bar{D}_{j} \\beta^{j}$\n",
+    "<a id='step6p4'></a>\n",
+    "\n",
+    "## Step 6.d: Term 4 of  $\\partial_t \\bar{\\Lambda}^{i}$ \\[Back to [top](#toc)\\]\n",
+    "$$\\label{step6p4}$$\n",
+    "\n",
+    "$\\partial_t \\bar{\\Lambda}^{i}$: $\\frac{1}{3} \\bar{D}^{i} \\bar{D}_{j} \\beta^{j}$\n",
     "\n",
     "Recall first that\n",
     "\n",
@@ -708,7 +785,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 6.e: Term 5 of  $\\partial_t \\bar{\\Lambda}^{i}$: $- 2 \\bar{A}^{i j} \\left (\\partial_{j} \\alpha - 6\\alpha \\partial_{j} \\phi\\right)$"
+    "<a id='step6p5'></a>\n",
+    "\n",
+    "## Step 6.e: Term 5 of  $\\partial_t \\bar{\\Lambda}^{i}$ \\[Back to [top](#toc)\\]\n",
+    "$$\\label{step6p5}$$\n",
+    "\n",
+    "Term 5 of  $\\partial_t \\bar{\\Lambda}^{i}$: $- 2 \\bar{A}^{i j} \\left (\\partial_{j} \\alpha - 6\\alpha \\partial_{j} \\phi\\right)$"
    ]
   },
   {
@@ -728,7 +810,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 6.f: Term 6 of $\\partial_t \\bar{\\Lambda}^{i}$: $2\\alpha \\bar{A}^{j k} \\Delta_{j k}^{i}$"
+    "<a id='step6p6'></a>\n",
+    "\n",
+    "## Step 6.f: Term 6 of $\\partial_t \\bar{\\Lambda}^{i}$ \\[Back to [top](#toc)\\]\n",
+    "$$\\label{step6p6}$$\n",
+    "\n",
+    "Term 6 of $\\partial_t \\bar{\\Lambda}^{i}$: $2\\alpha \\bar{A}^{j k} \\Delta_{j k}^{i}$"
    ]
   },
   {
@@ -750,7 +837,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 6.g: Term 7 of $\\partial_t \\bar{\\Lambda}^{i}$: $-\\frac{4}{3} \\alpha \\bar{\\gamma}^{i j} \\partial_{j} K$"
+    "<a id='step6p7'></a>\n",
+    "\n",
+    "## Step 6.g: Term 7 of $\\partial_t \\bar{\\Lambda}^{i}$ \\[Back to [top](#toc)\\]\n",
+    "$$\\label{step6p7}$$\n",
+    "\n",
+    "$\\partial_t \\bar{\\Lambda}^{i}$: $-\\frac{4}{3} \\alpha \\bar{\\gamma}^{i j} \\partial_{j} K$"
    ]
   },
   {
@@ -911,7 +1003,10 @@
     "<a id='latex_pdf_output'></a>\n",
     "\n",
     "# Step 9: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
-    "$$\\label{latex_pdf_output}$$"
+    "$$\\label{latex_pdf_output}$$\n",
+    "\n",
+    "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
+    "[Tutorial-BSSN_time_evolution-BSSN_RHSs.pdf](Tutorial-BSSN_time_evolution-BSSN_RHSs.pdf) (Note that clicking on this link may not work; you may need to open the PDF file through another means.)"
    ]
   },
   {
@@ -924,7 +1019,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-BSSN_time_evolution-BSSN_RHSs.ipynb to latex\n",
-      "[NbConvertApp] Writing 101447 bytes to Tutorial-BSSN_time_evolution-BSSN_RHSs.tex\n",
+      "[NbConvertApp] Writing 98558 bytes to Tutorial-BSSN_time_evolution-BSSN_RHSs.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
