--- a/Tutorial-BSSN_time_evolution-BSSN_gauge_RHSs.ipynb
+++ b/Tutorial-BSSN_time_evolution-BSSN_gauge_RHSs.ipynb
@@ -6,24 +6,32 @@
    "source": [
     "# BSSN Time-Evolution Equations for the Gauge Fields $\\alpha$ and $\\beta^i$\n",
     "\n",
-    "### Author: Zach Etienne\n",
-    "\n",
+    "## Author: Zach Etienne\n",
+    "### Formatting improvements courtesy Brandon Clark\n",
     "<font color='green'>**All expressions generated in this module have been validated against a trusted code (the original NRPy+/SENR code, which itself was validated against [Baumgarte's code](https://arxiv.org/abs/1211.6632)).**</font>\n",
     "\n",
     "## Python module containing the final expressions constructed here: [BSSN/BSSN_gauge_RHSs.py](../edit/BSSN/BSSN_gauge_RHSs.py)\n",
     "\n",
+    "\n",
+    "## Introduction:\n",
+    "This tutorial module constructs SymPy expressions for the right-hand sides of the time-evolution equations for the gauge fields $\\alpha$ (the lapse, governing how much proper time elapses at each point between one timestep in a 3+1 solution to Einstein's equations and the next) and $\\beta^i$ (the shift, governing how much proper distance numerical grid points move from one timestep in a 3+1 solution to Einstein's equations and the next).\n",
+    "\n",
+    "Though we are completely free to choose gauge conditions (i.e., free to choose the form of the right-hand sides of the gauge time evolution equations), very few have been found robust in the presence of (puncture) black holes. So we focus here only on a few of the most stable choices.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id='toc'></a>\n",
     "\n",
     "# Table of Contents\n",
     "$$\\label{toc}$$\n",
     "\n",
-    "This tutorial module constructs SymPy expressions for the right-hand sides of the time-evolution equations for the gauge fields $\\alpha$ (the lapse, governing how much proper time elapses at each point between one timestep in a 3+1 solution to Einstein's equations and the next) and $\\beta^i$ (the shift, governing how much proper distance numerical grid points move from one timestep in a 3+1 solution to Einstein's equations and the next).\n",
+    "This module is organized as follows\n",
     "\n",
-    "Though we are completely free to choose gauge conditions (i.e., free to choose the form of the right-hand sides of the gauge time evolution equations), very few have been found robust in the presence of (puncture) black holes. So we focus here only on a few of the most stable choices.\n",
-    "\n",
-    "The module is organized as follows\n",
-    "\n",
-    "1. [Step 1](#initializenrpy): Initialize needed NRPy+ modules\n",
+    "1. [Step 1](#initializenrpy): Initialize needed Python/NRPy+ modules\n",
     "1. [Step 2](#lapseconditions): Right-hand side of $\\partial_t \\alpha$\n",
     "    1. [Step 2.a](#onepluslog): $1+\\log$ lapse\n",
     "    1. [Step 2.b](#harmonicslicing): Harmonic slicing\n",
@@ -41,10 +49,10 @@
    "source": [
     "<a id='initializenrpy'></a>\n",
     "\n",
-    "# Step 1: Initialize needed NRPy+ modules \\[Back to [top](#toc)\\]\n",
+    "# Step 1: Initialize needed Python/NRPy+ modules \\[Back to [top](#toc)\\]\n",
     "$$\\label{initializenrpy}$$\n",
     "\n",
-    "Let's start by importing all the needed modules from NRPy+:"
+    "Let's start by importing all the needed modules from Python/NRPy+:"
    ]
   },
   {
@@ -62,7 +70,7 @@
     }
    ],
    "source": [
-    "# Step 1: Import all needed modules from NRPy+:\n",
+    "# Step 1: Initialize needed Python/NRPy+ modules\n",
     "import sympy as sp\n",
     "import NRPy_param_funcs as par\n",
     "import indexedexp as ixp\n",
@@ -186,7 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Implement the harmonic slicing lapse condition\n",
+    "# Step 2.b: Implement the harmonic slicing lapse condition\n",
     "if par.parval_from_str(thismodule+\"::LapseEvolutionOption\") == \"HarmonicSlicing\":\n",
     "    if par.parval_from_str(\"BSSN.BSSN_quantities::EvolvedConformalFactor_cf\") == \"W\":\n",
     "        alpha_rhs = -3*cf**(-4)*Brhs.cf_rhs\n",
@@ -332,6 +340,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Step 3.b.i: The right-hand side of the \\partial_t \\beta^i equation\n",
     "if par.parval_from_str(thismodule+\"::ShiftEvolutionOption\") == \"GammaDriving2ndOrder_Covariant\":\n",
     "    # Step 14 Option 2: \\partial_t \\beta^i = \\left[\\beta^j \\bar{D}_j \\beta^i\\right] + B^{i}\n",
     "    # First we need GammabarUDD, defined in Bq.gammabar__inverse_and_derivs()\n",
@@ -383,6 +392,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Step 3.b.ii: The right-hand side of the \\partial_t B^i equation\n",
     "if par.parval_from_str(thismodule+\"::ShiftEvolutionOption\") == \"GammaDriving2ndOrder_Covariant\":\n",
     "    # Step 15: Covariant option:\n",
     "    #  \\partial_t B^i = \\beta^j \\bar{D}_j B^i\n",
@@ -466,12 +476,13 @@
    "source": [
     "<a id='code_validation'></a>\n",
     "\n",
-    "# Step 5: NRPy+ Module Code Validation \\[Back to [top](#toc)\\]\n",
+    "# Step 5: Code Validation against BSSN.BSSN_gauge_RHSs NRPy+ module \\[Back to [top](#toc)\\]\n",
     "$$\\label{code_validation}$$\n",
     "\n",
     "Here, as a code validation check, we verify agreement in the SymPy expressions for the RHSs of the BSSN gauge equations between\n",
+    "\n",
     "1. this tutorial and \n",
-    "2. the NRPy+ BSSN::BSSN_gauge_RHSs module.\n",
+    "2. the NRPy+ [BSSN.BSSN_gauge_RHSs](../edit/BSSN/BSSN_gauge_RHSs.py) module.\n",
     "\n",
     "By default, we analyze the RHSs in Spherical coordinates and with the covariant Gamma-driving second-order shift condition, though other coordinate systems & gauge conditions may be chosen."
    ]
@@ -492,7 +503,7 @@
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::RMAX\n",
       "^^^ Ignore the minor warnings above. ^^^\n",
       "\n",
-      "Consistency check between BSSN_RHSs tutorial and NRPy+ module: ALL SHOULD BE ZERO.\n",
+      "Consistency check between BSSN.BSSN_gauge_RHSs tutorial and NRPy+ module: ALL SHOULD BE ZERO.\n",
       "alpha_rhs - bssnrhs.alpha_rhs = 0\n",
       "vet_rhsU[0] - bssnrhs.vet_rhsU[0] = 0\n",
       "bet_rhsU[0] - bssnrhs.bet_rhsU[0] = 0\n",
@@ -546,7 +557,10 @@
     "<a id='latex_pdf_output'></a>\n",
     "\n",
     "# Step 6: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
-    "$$\\label{latex_pdf_output}$$"
+    "$$\\label{latex_pdf_output}$$\n",
+    "\n",
+    "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
+    "[Tutorial-BSSN_time_evolution-BSSN_gauge_RHSs.pdf](Tutorial-BSSN_time_evolution-BSSN_gauge_RHSs.pdf) (Note that clicking on this link may not work; you may need to open the PDF file through another means.)"
    ]
   },
   {
@@ -559,7 +573,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-BSSN_time_evolution-BSSN_gauge_RHSs.ipynb to latex\n",
-      "[NbConvertApp] Writing 58361 bytes to Tutorial-BSSN_time_evolution-BSSN_gauge_RHSs.tex\n",
+      "[NbConvertApp] Writing 58762 bytes to Tutorial-BSSN_time_evolution-BSSN_gauge_RHSs.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
