--- a/Tutorial-ETK_thorn-IDMaxwellNRPy.ipynb
+++ b/Tutorial-ETK_thorn-IDMaxwellNRPy.ipynb
@@ -4,25 +4,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## IDMaxwellNRPy: An Einstein Toolkit Initial Data Thorn for Maxwell's equations\n",
+    "# IDMaxwellNRPy: An Einstein Toolkit Initial Data Thorn for Maxwell's equations\n",
+    "\n",
+    "## Author: Zach Etienne\n",
+    "### Formatting improvements courtesy Brandon Clark\n",
     "\n",
     "### NRPy+ Source Code for this module: [Maxwell/MaxwellCartesian_ID.py](../edit/Maxwell/MaxwellCartesian_ID.py) , which is fully documented in the [previous NRPy+ tutorial module](Tutorial-MaxwellCartesian.ipynb) on using NRPy+ to construct these Maxwell initial data as SymPy expressions.\n",
     "\n",
-    "<font color='red'>**This module has NOT been validated against a trusted code; do not use it for science.**</font>"
+    "## Introduction:\n",
+    "In this part of the tutorial, we will construct an Einstein Toolkit (ETK) thorn (module) that will set up *initial data* for Maxwell's equations. In a [previous tutorial module](Tutorial-MaxwellCartesian.ipynb), we used NRPy+ to contruct the SymPy expressions for plane-wave initial data. \n",
+    "\n",
+    "We will construct this thorn in two steps.\n",
+    "\n",
+    "1. Call on NRPy+ to convert the SymPy expressions for the initial data into one C-code kernel.\n",
+    "2. Write the C code and linkages to the Einstein Toolkit infrastructure (i.e., the .ccl files) to complete this Einstein Toolkit module."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this part of the tutorial, we will construct an Einstein Toolkit (ETK) thorn (module) that will set up *initial data* for Maxwell's equations. In a [previous tutorial module](Tutorial-MaxwellCartesian.ipynb), we used NRPy+ to contruct the SymPy expressions for plane-wave initial data. \n",
+    "<a id='toc'></a>\n",
     "\n",
-    "We will construct this thorn in two steps.\n",
+    "# Table of Contents\n",
+    "$$\\label{toc}$$\n",
     "\n",
-    "1. Call on NRPy+ to convert the SymPy expressions for the initial data into one C-code kernel.\n",
-    "1. Write the C code and linkages to the Einstein Toolkit infrastructure (i.e., the .ccl files) to complete this Einstein Toolkit module.\n",
+    "This module is organized as follows\n",
     "\n",
-    "### Step 1: Call on NRPy+ to convert the SymPy expression for the Maxwell's equations initial data into a C-code kernel. \n",
+    "1. [Step 1](#initializenrpy): Call on NRPy+ to convert the SymPy expression for the Maxwell's equations initial data into a C-code kernel\n",
+    "1. [Step 2](#einstein): Interfacing with the Einstein Toolkit\n",
+    "    1. [Step 2.a](#einstein_c): Constructing the Einstein Toolkit C-code calling functions that include the C code kernels\n",
+    "    1. [Step 2.b](#einstein_ccl): CCL files - Define how this module interacts and interfaces with the larger Einstein Toolkit infrastructure\n",
+    "    1. [Step 2.c](#einstein_list): Add the C code to the Einstein Toolkit compilation list\n",
+    "1. [Step 3](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='initializenrpy'></a>\n",
+    "\n",
+    "# Step 1: Call on NRPy+ to convert the SymPy expression for the Maxwell's equations initial data into a C-code kernel \\[Back to [top](#toc)\\]\n",
+    "$$\\label{initializenrpy}$$\n",
     "\n",
     "After importing the core modules, we will set $\\text{GridFuncMemAccess}$ to $\\text{ETK}$. SymPy expressions for plane wave initial data are written inside [Maxwell/MaxwellCartesian_ID.py](../edit/Maxwell/MaxwellCartesian_ID.py), and we simply import them for use here."
    ]
@@ -33,6 +57,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Step 1: Call on NRPy+ to convert the SymPy expression \n",
+    "#         for the Maxwell's equations initial data into a C-code kernel\n",
+    "\n",
     "# Step 1a: Import needed NRPy+ core modules:\n",
     "import NRPy_param_funcs as par\n",
     "import indexedexp as ixp\n",
@@ -121,9 +148,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 2: Interfacing with the Einstein Toolkit\n",
+    "<a id='einstein'></a>\n",
     "\n",
-    "#### Step 2a: Constructing the Einstein Toolkit C-code calling functions that include the C code kernels.\n",
+    "# Step 2: Interfacing with the Einstein Toolkit \\[Back to [top](#toc)\\]\n",
+    "$$\\label{einstein}$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='einstein_c'></a>\n",
+    "\n",
+    "## Step 2.a: Constructing the Einstein Toolkit C-code calling functions that include the C code kernels \\[Back to [top](#toc)\\]\n",
+    "$$\\label{einstein_c}$$\n",
     "\n",
     "We will write another C file with the functions we need here."
    ]
@@ -172,7 +210,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 2b: CCL files - Define how this module interacts and interfaces with the larger Einstein Toolkit infrastructure\n",
+    "<a id='einstein_ccl'></a>\n",
+    "\n",
+    "## Step 2.b: CCL files - Define how this module interacts and interfaces with the larger Einstein Toolkit infrastructure \\[Back to [top](#toc)\\]\n",
+    "$$\\label{einstein_ccl}$$\n",
     "\n",
     "Writing a module (\"thorn\") within the Einstein Toolkit requires that three \"ccl\" files be constructed, all in the root directory of the thorn:\n",
     "\n",
@@ -305,7 +346,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Step 2c: Add the C code to the Einstein Toolkit compilation list.\n",
+    "<a id='einstein_list'></a>\n",
+    "\n",
+    "## Step 2.c: Add the C code to the Einstein Toolkit compilation list \\[Back to [top](#toc)\\]\n",
+    "$$\\label{einstein_list}$$\n",
     "\n",
     "We will also need $\\text{make.code.defn}$, which indicates the list of files that need to be compiled. This thorn only has the one C file to compile."
    ]
@@ -327,25 +371,76 @@
     "%%writefile MaxwellID/src/make.code.defn\n",
     "SRCS = InitialData.c"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='latex_pdf_output'></a>\n",
+    "\n",
+    "# Step 3: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "$$\\label{latex_pdf_output}$$\n",
+    "\n",
+    "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
+    "[Tutorial-ETK_thorn-IDMaxwellNRPy.pdf](Tutorial-ETK_thorn-IDMaxwellNRPy.pdf) (Note that clicking on this link may not work; you may need to open the PDF file through another means.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook Tutorial-ETK_thorn-IDMaxwellNRPy.ipynb to latex\n",
+      "[NbConvertApp] Writing 51463 bytes to Tutorial-ETK_thorn-IDMaxwellNRPy.tex\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx Tutorial-ETK_thorn-IDMaxwellNRPy.ipynb\n",
+    "!pdflatex -interaction=batchmode Tutorial-ETK_thorn-IDMaxwellNRPy.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-ETK_thorn-IDMaxwellNRPy.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-ETK_thorn-IDMaxwellNRPy.tex\n",
+    "!rm -f Tut*.out Tut*.aux Tut*.log"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
