--- a/Tutorial-ETK_thorn-MaxwellEvol.ipynb
+++ b/Tutorial-ETK_thorn-MaxwellEvol.ipynb
@@ -6,15 +6,12 @@
    "source": [
     "# MaxwellEvol: Solving Maxwell's Equations in the Einstein Toolkit with the Method of Lines\n",
     "\n",
+    "## Author: Zach Etienne\n",
+    "### Formatting improvements courtesy Brandon Clark\n",
+    "\n",
     "### NRPy+ Source Code for this module: [Maxwell/MaxwellCartesian_Evol.py](../edit/Maxwell/MaxwellCartesian_Evol.py), which is fully documented in the [previous NRPy+ tutorial module](Tutorial-MaxwellCartesian.ipynb) on using NRPy+ to construct Maxwell's equations and initial data as SymPy expressions.\n",
     "\n",
-    "<font color='red'>**This module has NOT been validated to converge at the expected order to the exact solution.**</font>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Introduction:\n",
     "This module focuses on using the equations developed in the [last tutorial](Tutorial-MaxwellCartesian.ipynb) to build an Einstein Toolkit (ETK) thorn to solve Maxwell's equations in Cartesian coordinates. This tutorial will focus on implementing the time evolution aspects; the next will construct the thorn that will set up the initial data to be evolved.\n",
     "\n",
     "When interfaced properly with the ETK, this module will propagate the initial data for $E_i$, $A_i$, and $\\psi$ ( and $\\Gamma$, if we so choose), defined in the next tutorial, forward in time by integrating the equations for $\\partial_t E_i$, $\\partial_t A_i$ and $\\partial_t \\psi$ (and possibly $\\partial_t \\Gamma$) subject to spatial boundary conditions. The time evolution itself is handled by the $\\text{MoL}$ (Method of Lines) thorn in the $\\text{CactusNumerical}$ arrangement, and the boundary conditions by the $\\text{Boundary}$ thorn in the $\\text{CactusBase}$ arrangement. \n",
@@ -22,7 +19,38 @@
     "Similar to the Maxwell initial data module, we will construct the WaveToyNRPy module in two steps.\n",
     "\n",
     "1. Call on NRPy+ to convert the SymPy expressions for the evolution equations into one C-code kernel.\n",
-    "1. Write the C code and linkages to the Einstein Toolkit infrastructure (i.e., the .ccl files) to complete this Einstein Toolkit module.\n"
+    "1. Write the C code and linkages to the Einstein Toolkit infrastructure (i.e., the .ccl files) to complete this Einstein Toolkit module."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc'></a>\n",
+    "\n",
+    "# Table of Contents\n",
+    "$$\\label{toc}$$\n",
+    "\n",
+    "1. [Step 1](#initializenrpy): Initialize core Python/NRPy+ modules\n",
+    "1. [Step 2](#etk): Interfacing with the Einstein Toolkit\n",
+    "    1. [Step 2.a](#etkc): Constructing the Einstein Toolkit C-code calling functions that include the C code kernels\n",
+    "    1. [Step 2.b](#cclfiles): CCL files - Define how this module interacts and interfaces with the larger Einstein Toolkit infrastructure\n",
+    "    1. [Step 2.c](#etk_list): Add the C file to Einstein Toolkit compilation list\n",
+    "1. [Step 3](#code_validation): Code Validation (To be performed)\n",
+    "1. [Step 4](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF file\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='initializenrpy'></a>\n",
+    "\n",
+    "# Step 1: Initialize core Python/NRPy+ modules \\[Back to [top](#toc)\\]\n",
+    "$$\\label{initializenrpy}$$\n",
+    "\n",
+    "Let's start by importing all the needed modules from Python/NRPy+:"
    ]
   },
   {
@@ -159,9 +187,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 2: Interfacing with the Einstein Toolkit\n",
+    "<a id='etk'></a>\n",
     "\n",
-    "#### Step 2a: Constructing the Einstein Toolkit C-code calling functions that include the C code kernels.\n",
+    "# Step 2: Interfacing with the Einstein Toolkit \\[Back to [top](#toc)\\]\n",
+    "$$\\label{etk}$$\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='etkc'></a>\n",
+    "\n",
+    "## Step 2.a: Constructing the Einstein Toolkit C-code calling functions that include the C code kernels \\[Back to [top](#toc)\\]\n",
+    "$$\\label{etkc}$$\n",
     "\n",
     "Now that we have generated the C code kernel *ScalarWave_RHSs.h* and the parameters file *NRPy_params.h*, we will need to write C code to make use of these files. To do this, we can simply follow the example within the [IDScalarWaveNRPy tutorial module](Tutorial-ETK_thorn-IDScalarWaveNRPy.ipynb). Functions defined by these files will be called by the Einstein Toolkit scheduler (specified in schedule.ccl below)."
    ]
@@ -387,7 +427,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Step 2b: CCL files - Define how this module interacts and interfaces with the larger Einstein Toolkit infrastructure\n",
+    "<a id='cclfiles'></a>\n",
+    "\n",
+    "## Step 2.b: CCL files - Define how this module interacts and interfaces with the larger Einstein Toolkit infrastructure \\[Back to [top](#toc)\\]\n",
+    "$$\\label{cclfiles}$$\n",
     "\n",
     "Writing a module (\"thorn\") within the Einstein Toolkit requires that three \"ccl\" files be constructed, all in the root directory of the thorn:\n",
     "\n",
@@ -664,7 +707,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Step 2c: Add the C file to Einstein Toolkit compilation list.\n",
+    "<a id='etk_list'></a>\n",
+    "\n",
+    "## Step 2.c: Add the C file to Einstein Toolkit compilation list \\[Back to [top](#toc)\\]\n",
+    "$$\\label{etk_list}$$\n",
     "\n",
     "We will also need $\\text{make.code.defn}$, which indicates the list of files that need to be compiled. This thorn only has the one C file to compile."
    ]
@@ -691,35 +737,74 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Code Validation\n",
-    "(To be performed)"
+    "<a id='code_validation'></a>\n",
+    "\n",
+    "# Step 3: Code Validation (To be performed) \\[Back to [top](#toc)\\]\n",
+    "$$\\label{code_validation}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='latex_pdf_output'></a>\n",
+    "\n",
+    "# Step 4: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "$$\\label{latex_pdf_output}$$\n",
+    "\n",
+    "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
+    "[Tutorial-ETK_thorn-MaxwellEvol.pdf](Tutorial-ETK_thorn-MaxwellEvol.pdf) (Note that clicking on this link may not work; you may need to open the PDF file through another means.)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook Tutorial-ETK_thorn-MaxwellEvol.ipynb to latex\n",
+      "[NbConvertApp] Writing 95900 bytes to Tutorial-ETK_thorn-MaxwellEvol.tex\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx Tutorial-ETK_thorn-MaxwellEvol.ipynb\n",
+    "!pdflatex -interaction=batchmode Tutorial-ETK_thorn-MaxwellEvol.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-ETK_thorn-MaxwellEvol.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-ETK_thorn-MaxwellEvol.tex\n",
+    "!rm -f Tut*.out Tut*.aux Tut*.log"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
