--- a/Tutorial-GiRaFFEfood_HO_Aligned_Rotator.ipynb
+++ b/Tutorial-GiRaFFEfood_HO_Aligned_Rotator.ipynb
@@ -4,37 +4,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='top'></a>\n",
+    "# $\\texttt{GiRaFFEfood}$: Initial data for $\\texttt{GiRaFFE}$ Aligned Rotator\n",
     "\n",
+    "## Author: Zach Etienne & Patrick Nelson\n",
+    "### Formatting improvements courtesy Brandon Clark\n",
     "\n",
-    "# $\\texttt{GiRaFFEfood}$: Initial data for $\\texttt{GiRaFFE}$\n",
-    "\n",
-    "## Aligned Rotator\n",
-    "\n",
-    "$$\\label{top}$$\n",
+    "## Introduction: \n",
     "\n",
     "This module provides another initial data option for $\\texttt{GiRaFFE}$. This is a flat-spacetime test with initial data $$A_{\\phi} = \\frac{\\mu \\varpi^2}{r^3},$$ where  $\\mu = B_p R^3_{\\rm NS} / 2$, $R_{\\rm NS}$ is the neutron star radius, and $\\varpi = \\sqrt{x^2+y^2}$ is the cylindrical radius. We let $A_r = A_\\theta = 0$.\n",
     "\n",
-    "Additionally, the drift velocity $v^i = \\Omega \\textbf{e}_z \\times \\textbf{r} = [ijk] \\Omega \\textbf{e}^j_z x^k$, where $[ijk]$ is the Levi-Civita permutation symbol and $\\textbf{e}^i_z = (0,0,1)$. See [previous NRPy+ tutorial module](Tutorial-GiRaFFEfood_HO.ipynb) for more general detail on how this is used.\n",
-    "\n",
-    "#### Table of Contents:\n",
-    "1. [Steps 0-1:](#preliminaries) Preliminaries\n",
-    "1. [Step 2:](#step2) Set the vector A in Spherical coordinates\n",
-    "1. [Step 3:](#step3) Use the Jacobian matrix to transform the vector to Cartesian coordinates.\n",
-    "1. [Step 4:](#step4) Calculate $v^i$\n",
-    "1. [Step 5:](#step6) NRPy+ Module Code Validation\n"
+    "Additionally, the drift velocity $v^i = \\Omega \\textbf{e}_z \\times \\textbf{r} = [ijk] \\Omega \\textbf{e}^j_z x^k$, where $[ijk]$ is the Levi-Civita permutation symbol and $\\textbf{e}^i_z = (0,0,1)$. See [previous NRPy+ tutorial module](Tutorial-GiRaFFEfood_HO.ipynb) for details on how this is used."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='preliminaries'></a>\n",
+    "<a id='toc'></a>\n",
     "\n",
-    "### Steps 0-1: Preliminaries \\[Back to [top](#top)\\]\n",
+    "# Table of Contents:\n",
+    "$$\\label{toc}$$\n",
     "\n",
-    "Here, we will import the NRPy+ core modules and set the reference metric to Cartesian, set commonly used NRPy+ parameters, and set C parameters that will be set from outside the code eventually generated from these expressions. We will also set up a parameter to determine what initial data is set up, although it won't do much yet.\n",
-    "$$\\label{preliminaries}$$"
+    "1. [Step 1](#initializenrpy): Import core NRPy+ modules and set NRPy+ parameters\n",
+    "1. [Step 2](#set_aphi): Set the vector $A_{\\phi}$ Spherical coordinates \n",
+    "1. [Step 3](#jacobian) Use the Jacobian matrix to transform the vectors to Cartesian coordinates\n",
+    "1. [Step 4](#vi) Calculate $v^i$\n",
+    "1. [Step 5](#code_validation): Code Validation against GiRaFFEfood_HO/GiRaFFEfood_HO_Aligned_Rotator NRPy+ Module\n",
+    "1. [Step 6](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='initializenrpy'></a>\n",
+    "\n",
+    "# Step 1: Import core NRPy+ modules and set NRPy+ parameters \\[Back to [top](#toc)\\]\n",
+    "$$\\label{initializenrpy}$$\n",
+    "\n",
+    "Here, we will import the NRPy+ core modules and set the reference metric to Cartesian, set commonly used NRPy+ parameters, and set C parameters that will be set from outside the code eventually generated from these expressions. We will also set up a parameter to determine what initial data is set up, although it won't do much yet."
    ]
   },
   {
@@ -68,17 +76,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='step2'></a>\n",
+    "<a id='set_aphi'></a>\n",
     "\n",
-    "### Step 2: Set the vectors A in Spherical coordinates \\[Back to [top](#top)\\]\n",
+    "# Step 2: Set the vector $A_{\\phi}$ in Spherical coordinates \\[Back to [top](#toc)\\]\n",
+    "$$\\label{set_aphi}$$\n",
     "\n",
     "We will first build the fundamental vector $A_i$ in spherical coordinates (see [Table 3](https://arxiv.org/pdf/1704.00599.pdf)). Note that we use reference_metric.py to set $r$ and $\\theta$ in terms of Cartesian coordinates; this will save us a step later when we convert to Cartesian coordinates. So, we set \n",
     "\\begin{align}\n",
     "A_{\\phi} &= \\frac{\\mu \\varpi^2}{r^3}, \\\\\n",
     "\\end{align}\n",
-    "with $\\mu = B_p R^3_{\\rm NS} / 2$, $R_{\\rm NS}$ is the neutron star radius, and $\\varpi = \\sqrt{x^2+y^2}$\n",
-    "\n",
-    "$$\\label{step2}$$"
+    "with $\\mu = B_p R^3_{\\rm NS} / 2$, $R_{\\rm NS}$ is the neutron star radius, and $\\varpi = \\sqrt{x^2+y^2}$\n"
    ]
   },
   {
@@ -102,9 +109,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='step3'></a>\n",
+    "<a id='jacobian'></a>\n",
     "\n",
-    "### Step 3: Use the Jacobian matrix to transform the vectors to Cartesian coordinates. \\[Back to [top](#top)\\]\n",
+    "# Step 3: Use the Jacobian matrix to transform the vector to Cartesian coordinates \\[Back to [top](#toc)\\]\n",
+    "$$\\label{jacobian}$$\n",
     "\n",
     "Now, we will use the coordinate transformation definitions provided by reference_metric.py to build the Jacobian \n",
     "$$ \n",
@@ -152,23 +160,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='step4'></a>\n",
+    "<a id='vi'></a>\n",
     "\n",
-    "### Step 4: Calculate $v^i$ \\[Back to [top](#top)\\]\n",
+    "# Step 4: Calculate $v^i$ \\[Back to [top](#toc)\\]\n",
+    "$$\\label{vi}$$\n",
     "\n",
-    "Here, we will calculate the drift velocity $v^i = \\Omega \\textbf{e}_z \\times \\textbf{r} = [ijk] \\Omega \\textbf{e}^j_z x^k$, where $[ijk]$ is the Levi-Civita permutation symbol and $\\textbf{e}^i_z = (0,0,1)$. Conveniently, in flat space, the drift velocity reduces to the Valencia velocity because $\\alpha = 1$ and $\\beta^i = 0$.\n",
-    "\n",
-    "$$\\label{step4}$$"
+    "Here, we will calculate the drift velocity $v^i = \\Omega \\textbf{e}_z \\times \\textbf{r} = [ijk] \\Omega \\textbf{e}^j_z x^k$, where $[ijk]$ is the Levi-Civita permutation symbol and $\\textbf{e}^i_z = (0,0,1)$. Conveniently, in flat space, the drift velocity reduces to the Valencia velocity because $\\alpha = 1$ and $\\beta^i = 0$.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 4: Calculate v^i\n",
-    "# Here, we build the Levi-Civita tensor from the Levi-Civita symbol.\n",
     "import WeylScal4NRPy.WeylScalars_Cartesian as weyl\n",
     "LeviCivitaSymbolDDD = weyl.define_LeviCivitaSymbol_rank3()\n",
     "\n",
@@ -190,29 +195,56 @@
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
     "        for k in range(DIM):\n",
-    "            ValenciavU[i] += LeviCivitaSymbolDDD[i][j][k] * Omega_aligned_rotator * unit_zU[j] * rfm.xx[k]\n"
+    "            ValenciavU[i] += LeviCivitaSymbolDDD[i][j][k] * Omega_aligned_rotator * unit_zU[j] * rfm.xx[k]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='step6'></a>\n",
+    "<a id='code_validation'></a>\n",
     "\n",
-    "### NRPy+ Module Code Validation \\[Back to [top](#top)\\]\n",
+    "# Step 5: Code Validation against GiRaFFEfood_HO/GiRaFFEfood_HO_Aligned_Rotator NRPy+ Module  \\[Back to [top](#toc)\\]\n",
+    "$$\\label{code_validation}$$\n",
     "\n",
     "Here, as a code validation check, we verify agreement in the SymPy expressions for the $\\texttt{GiRaFFE}$ Aligned Rotator initial data equations  we intend to use between\n",
-    "1. this tutorial and \n",
-    "2. the NRPy+ [GiRaFFEfood_HO_Aligned_Rotator.py](../edit/GiRaFFEfood_HO/GiRaFFEfood_HO_Aligned_Rotator.py) module.\n",
     "\n",
-    "$$\\label{step6}$$"
+    "1. this tutorial and \n",
+    "2. the NRPy+ [GiRaFFEfood_HO_Aligned_Rotator.py](../edit/GiRaFFEfood_HO/GiRaFFEfood_HO_Aligned_Rotator.py) module."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vvv Ignore the minor warnings below. vvv\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::xmin\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::xmax\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::ymin\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::ymax\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::zmin\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::zmax\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO_Aligned_Rotator::B_p_aligned_rotator\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO_Aligned_Rotator::R_NS_aligned_rotator\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO_Aligned_Rotator::Omega_aligned_rotator\n",
+      "^^^ Ignore the minor warnings above. ^^^\n",
+      "\n",
+      "Consistency check between GiRaFFEfood_HO tutorial and NRPy+ module: ALL SHOULD BE ZERO.\n",
+      "ValenciavU[0] - gfho.ValenciavU[0] = 0\n",
+      "AD[0] - gfho.AD[0] = 0\n",
+      "ValenciavU[1] - gfho.ValenciavU[1] = 0\n",
+      "AD[1] - gfho.AD[1] = 0\n",
+      "ValenciavU[2] - gfho.ValenciavU[2] = 0\n",
+      "AD[2] - gfho.AD[2] = 0\n"
+     ]
+    }
+   ],
    "source": [
     "# Reset the list of gridfunctions, as registering a gridfunction\n",
     "#   twice will spawn an error.\n",
@@ -237,14 +269,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Output to $\\LaTeX$, then PDF"
+    "<a id='latex_pdf_output'></a>\n",
+    "\n",
+    "# Step 6: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "$$\\label{latex_pdf_output}$$\n",
+    "\n",
+    "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
+    "[Tutorial-GiRaFFEfood_HO_Aligned_Rotator.pdf](Tutorial-GiRaFFEfood_HO_Aligned_Rotator.pdf) (Note that clicking on this link may not work; you may need to open the PDF file through another means.)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook Tutorial-GiRaFFEfood_HO_Aligned_Rotator.ipynb to latex\n",
+      "[NbConvertApp] Writing 41684 bytes to Tutorial-GiRaFFEfood_HO_Aligned_Rotator.tex\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n"
+     ]
+    }
+   ],
    "source": [
     "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx Tutorial-GiRaFFEfood_HO_Aligned_Rotator.ipynb\n",
     "!pdflatex -interaction=batchmode Tutorial-GiRaFFEfood_HO_Aligned_Rotator.tex\n",
