--- a/Tutorial-Psi4_tetrads.ipynb
+++ b/Tutorial-Psi4_tetrads.ipynb
@@ -6,11 +6,11 @@
    "source": [
     "# Tetrads for Evaluating the Outgoing Gravitational Wave Weyl scalar $\\psi_4$\n",
     "\n",
-    "### Authors: Patrick Nelson & Zach Etienne\n",
+    "## Authors: Patrick Nelson & Zach Etienne\n",
     "\n",
     "<font color='green'>**This module has been validated to agree at roundoff error with the WeylScal4 ETK thorn in Cartesian coordinates (as it agrees to roundoff error with Patrick Nelson's [Cartesian Weyl Scalars & Invariants NRPy+ tutorial module](Tutorial-WeylScalarsInvariants-Cartesian.ipynb), which itself was validated against WeylScal4). In addition, in SinhSpherical coordinates it yields results for a ringing Brill-Lindquist black hole remnant that agree with black hole perturbation theory to more than 7 decades in amplitude, surpassing the agreement seen in Fig. 6 of [Ruchlin, Etienne, & Baumgarte](https://arxiv.org/pdf/1712.07658.pdf).**</font>\n",
     "\n",
-    "## A Note on Notation\n",
+    "### A Note on Notation\n",
     "\n",
     "As is standard in NRPy+, \n",
     "\n",
@@ -19,10 +19,9 @@
     "\n",
     "As a corollary, any expressions involving mixed Greek and Latin indices will need to offset one set of indices by one: A Latin index in a four-vector will be incremented and a Greek index in a three-vector will be decremented (however, the latter case does not occur in this tutorial module).\n",
     "\n",
-    "<a id='toc'></a>\n",
     "\n",
-    "# Introduction, Table of Contents\n",
-    "$$\\label{toc}$$\n",
+    "## Introduction \n",
+    "\n",
     "\n",
     "This module constructs tetrad vectors $l^\\mu$, $m^\\mu$, and $n^\\mu$ for the $\\psi_4$ Weyl scalar, a quantity that is immensely useful when extracting gravitational wave content from a numerical relativity simulation. $\\psi_4$ is related to the gravitational wave strain via\n",
     "\n",
@@ -41,9 +40,19 @@
     "{n}^{[0}\\bar{m}^{j]}{n}^{[0}\\bar{m}^{l]},\n",
     "\\end{align}\n",
     "\n",
-    "Note that $\\psi_4$ is imaginary, with the imaginary components originating from the tetrad vector $m^\\mu$. This module does not specify a tetrad; instead it only constructs the above expression leaving $m^\\mu$ and $n^\\mu$ unspecified. This module defines these tetrad quantities, implementing the quasi-Kinnersley tetrad of [Baker, Campanelli, Lousto (2001)](https://arxiv.org/pdf/gr-qc/0104063.pdf).\n",
+    "Note that $\\psi_4$ is complex, with the imaginary components originating from the tetrad vector $m^\\mu$. This module does not specify a tetrad; instead it only constructs the above expression leaving $m^\\mu$ and $n^\\mu$ unspecified. This module defines these tetrad quantities, implementing the quasi-Kinnersley tetrad of [Baker, Campanelli, Lousto (2001)](https://arxiv.org/pdf/gr-qc/0104063.pdf)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc'></a>\n",
     "\n",
-    "**This tutorial module is organized as follows:**\n",
+    "# Table of Contents\n",
+    "$$\\label{toc}$$\n",
+    "\n",
+    "This tutorial module is organized as follows\n",
     "\n",
     "1. [Step 1](#initializenrpy): Initialize needed NRPy+ modules\n",
     "1. [Step 2](#quasikinnersley): The quasi-Kinnersley tetrad\n",
@@ -440,7 +449,10 @@
     "<a id='latex_pdf_output'></a>\n",
     "\n",
     "# Step 4: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
-    "$$\\label{latex_pdf_output}$$"
+    "$$\\label{latex_pdf_output}$$\n",
+    "\n",
+    "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
+    "[Tutorial-Psi4_tetrads.pdf](Tutorial-Psi4_tetrads.pdf) (Note that clicking on this link may not work; you may need to open the PDF file through another means.)"
    ]
   },
   {
@@ -453,7 +465,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-Psi4_tetrads.ipynb to latex\n",
-      "[NbConvertApp] Writing 51542 bytes to Tutorial-Psi4_tetrads.tex\n",
+      "[NbConvertApp] Writing 55961 bytes to Tutorial-Psi4_tetrads.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
