NRPyPlus_Tutorial: update main page with F-M initial data and in-progress SEOBNR

--- a/NRPyPlus_Tutorial.ipynb
+++ b/NRPyPlus_Tutorial.ipynb
@@ -47,6 +47,12 @@
     "+ Application: [Computing the 4-Velocity Time-Component $u^0$, the Magnetic Field Measured by a Comoving Observer $b^{\\mu}$, and the Poynting Vector $S^i$](Tutorial-u0_smallb_Poynting-Cartesian.ipynb)\n",
     "    + [<font color='green'>**sbPoynETNRPy**</font>: Evaluating $b^\\mu$ and $S^i$ in the <font color='green'>**Einstein Toolkit**</font>, using HydroBase variables as input](Tutorial-ETK_thorn-u0_smallb_Poynting.ipynb)\n",
     "\n",
+    "##### Solving the Effective-One-Body Equations of Motion\n",
+    "\n",
+    "+ Application (<font color='red'>**in progress**</font>): [SEOBNR: The Spinning-Effective-One-Body-Numerical-Relativity Hamiltonian](Tutorial-SEOBNR_Documentation.ipynb)\n",
+    "    + Solving the SEOBNR Hamiltonian equations of motion\n",
+    "        + [Taking exact derivatives of the SEOBNR Hamiltonian & generating highly optimized C code with NRPy+](Tutorial-Spinning_Effective_One_Body_Numerical_Relativity_Hamiltonian-Cartesian.ipynb)\n",
+    "\n",
     "### PART 3: Solving PDEs in Curvilinear Coordinate Systems\n",
     "+ [Moving beyond Cartesian Grids: Reference Metrics](Tutorial-Reference_Metric.ipynb)\n",
     "+ Application: [The Scalar Wave Equation in Curvilinear Coordinates, using a Reference Metric](Tutorial-ScalarWaveCurvilinear.ipynb)\n",
@@ -67,6 +73,8 @@
     "    + [Spinning UIUC black hole initial data](Tutorial-ADM_Initial_Data-UIUC_BlackHole.ipynb) (*Courtesy Terrence Pierre Jacques & Ian Ruchlin*)\n",
     "    + [Spinning Shifted Kerr-Schild black hole initial data](Tutorial-ADM_Initial_Data-ShiftedKerrSchild.ipynb) (*Courtesy George Vopal*)\n",
     "    + [Brill-Lindquist initial data: Two-black-holes released from rest](Tutorial-ADM_Initial_Data-Brill-Lindquist.ipynb)\n",
+    "    + [Black hole accretion disk initial data (Fishbone-Moncrief)](Tutorial-FishboneMoncriefID.ipynb)\n",
+    "        + [<font color='green'>**FishboneMoncriefID**</font>: Setting up Fishbone-Moncrief disk initial data within the <font color='green'>**Einstein Toolkit**</font>, using HydroBase variables as input](Tutorial-ETK_thorn-FishboneMoncriefID.ipynb)\n",
     "    + [Neutron Star initial data: The Tolman-Oppenheimer-Volkoff (TOV) solution](Tutorial-ADM_Initial_Data-TOV.ipynb) (*Courtesy Phil Chang*)\n",
     "+ **ADM-to-curvilinear-BSSN initial data conversion**\n",
     "    + [**Exact** ADM Spherical/Cartesian to BSSN Curvilinear Initial Data Conversion](Tutorial-ADM_Initial_Data-Converting_Exact_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb) (Use this module for initial data conversion if the initial data are known *exactly*. The BSSN quantity $\\lambda^i$ will be computed exactly using SymPy from given ADM quantities.)\n",
