Tutorial-FishboneMoncriefID: Step 3 in ToC

--- a/Tutorial-FishboneMoncriefID.ipynb
+++ b/Tutorial-FishboneMoncriefID.ipynb
@@ -40,7 +40,7 @@
     "    1. [Step 2.j](#adm_metric): Set the ADM quantities $\\alpha$, $\\beta^i$, and $\\gamma_{ij}$ from the spacetime metric $g_{\\mu\\nu}$\n",
     "    1. [Step 2.k](#magnetic_field_comoving_frame): Set the magnetic field components in the comoving frame $b^\\mu$, and $b^2$, which is twice the magnetic pressure\n",
     "    1. [Step 2.l](#lorentz_fac_valencia): Lorentz factor $\\Gamma = \\alpha u^0$ and Valencia 3-velocity $v^i_{(n)}$\n",
-    "1. [Step 3](#code_validation): Code Validation against TOV.TOV_Solver NRPy+ module \n",
+    "1. [Step 3](#output_to_c): Output SymPy expressions to C code, using NRPy+\n",
     "1. [Step 4](#code_validation): Code Validation against TOV.TOV_Solver NRPy+ module \n",
     "1. [Step 5](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF"
    ]
@@ -780,7 +780,7 @@
    "source": [
     "<a id='output_to_c'></a>\n",
     "\n",
-    "## Step 3: Output above-generated expressions to C code, using NRPy+ \\[Back to [top](#toc)\\]\n",
+    "## Step 3: Output SymPy expressions to C code, using NRPy+ \\[Back to [top](#toc)\\]\n",
     "$$\\label{output_to_c}$$\n",
     "\n",
     "Finally, we have contructed the underlying expressions necessary for the Fishbone-Moncrief initial data. By means of demonstration, we will use NRPy+'s FD_outputC to print the expressions. (The actual output statements are commented out right now, to save time in testing.)"
