SEOBNR: update initial condition documentation.

--- a/Tutorial-SEOBNR_Initial_Conditions.ipynb
+++ b/Tutorial-SEOBNR_Initial_Conditions.ipynb
@@ -65,7 +65,8 @@
    "outputs": [],
    "source": [
     "import sympy as sp\n",
-    "m1,m2,x,y,z,S1x,S1y,S1z,S2x,S2y,S2z = sp.symbols(\"m1 m2 x y z S1x S1y S1z S2x S2y S2z\",real=True)\n",
+    "m1,m2,x,y,z,px,py,pz,S1x,S1y,S1z,S2x,S2y,S2z = sp.symbols(\"m1 m2 x y z px py pz S1x S1y S1z S2x S2y S2z\",real=True)\n",
+    "partHpartp1,partHpartp2,partHpartp3 = sp.symbols(\"partHpartp1 partHpartp2 partHpartp3\",real=True)\n",
     "\n",
     "gamma = 0.577215664901532860606512090082402431"
    ]
@@ -88,7 +89,7 @@
    "source": [
     "<a id='mass_radius_terms'></a>\n",
     "\n",
-    "# ${\\rm d}r / {\\rm d}t$ \\[Back to [top](#toc)\\]\n",
+    "# Mass and separation terms \\[Back to [top](#toc)\\]\n",
     "$$\\label{mass_radius_terms}$$\n",
     "\n",
     "<font color='red'>LALSpinPrecHcapRvecDerivative_v3opt.c Line 15 claims that we're first going to compute [BB2010](https://arxiv.org/abs/0912.3517) Equation (A4), but I don't believe that's the case.</font>\n",
@@ -144,7 +145,7 @@
     "so that\n",
     "\n",
     "\\begin{equation*}\n",
-    "    a = \\sqrt{ a^{2} }\n",
+    "    a = \\sqrt{ a^{2} }.\n",
     "\\end{equation*}"
    ]
   },
@@ -601,6 +602,398 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# At this point we compute partial derivatives of $H_{\\rm real}$ with respect to the momentum coordinates"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='sigma'></a>\n",
+    "\n",
+    "# $\\boldsymbol{\\sigma}$ \\[Back to [top](#toc)\\]\n",
+    "$$\\label{sigma}$$\n",
+    "\n",
+    "From [BB2010](https://arxiv.org/abs/0912.3517) Equation (5.2),\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "    \\boldsymbol{\\sigma} = {\\bf S}_{1} + {\\bf S}_{2}.\n",
+    "\\end{equation*}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sigma1 = S1x + S2x\n",
+    "sigma2 = S1y + S2y\n",
+    "sigma3 = S1z + S2z"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='sigmastar'></a>\n",
+    "\n",
+    "# $\\boldsymbol{\\sigma}^{*}$ \\[Back to [top](#toc)\\]\n",
+    "$$\\label{sigmastar}$$\n",
+    "\n",
+    "From [BB2010](https://arxiv.org/abs/0912.3517) Equation (5.3),\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "    \\boldsymbol{\\sigma}^{*} = \\frac{ m_{2} }{ m_{1} } {\\bf S}_{1} + \\frac{ m_{1} }{ m_{2} }{\\bf S}_{2}.\n",
+    "\\end{equation*}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sigmastar1 = S1x*m2/m1 + S2x*m1/m2\n",
+    "sigmastar2 = S1y*m2/m1 + S2y*m1/m2\n",
+    "sigmastar3 = S1z*m2/m1 + S2z*m1/m2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='updatecoeffs'></a>\n",
+    "\n",
+    "# Update Coeffs \\[Back to [top](#toc)\\]\n",
+    "$$\\label{updatecoeffs}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='e3'></a>\n",
+    "\n",
+    "## ${\\bf e}_{3}$ \\[Back to [top](#toc)\\]\n",
+    "$$\\label{e3}$$\n",
+    "\n",
+    "From LALSimIMRSpinPrecEOBHcapExactDerivative.c Line 104, we only compute ${\\bf e}_{3}$ this way if $a \\not= 0$.\n",
+    "\n",
+    "From the discussion in [BB2010](https://arxiv.org/abs/0912.3517) after equation (5.52),\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "    {\\bf e}_{3} = {\\bf S}_{\\rm Kerr}.\n",
+    "\\end{equation*}\n",
+    "\n",
+    "<font color='red'>From LALSimIMRSpinPrecEOBHcapExactDerivative.c Lines 107--109,\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "    {\\bf e}_{3} = \\frac{ {\\bf S}_{\\rm Kerr} }{ a }.\n",
+    "\\end{equation*}\n",
+    "</font>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "e31 = SKerr1/a\n",
+    "e32 = SKerr2/a\n",
+    "e33 = SKerr3/a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='scaleds'></a>\n",
+    "\n",
+    "## Scaled ${\\bf S}$ \\[Back to [top](#toc)\\]\n",
+    "$$\\label{scaleds}$$\n",
+    "\n",
+    "From LALSpinPrecHcapRvecDerivative_v3opt.c Line 114,\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "    {\\bf S}_{\\rm scaled} = M^{2} {\\bf S}.\n",
+    "\\end{equation*}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "S1scaled1 = S1x*M*M\n",
+    "S1scaled2 = S1y*M*M\n",
+    "S1scaled3 = S1z*M*M\n",
+    "S2scaled1 = S2x*M*M\n",
+    "S2scaled2 = S2y*M*M\n",
+    "S2scaled3 = S2z*M*M"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='rcrossrdot'></a>\n",
+    "\n",
+    "## ${\\bf r} \\times \\dot{\\bf r}$ \\[Back to [top](#toc)\\]\n",
+    "$$\\label{rcrossrdot}$$\n",
+    "\n",
+    "From LALSpinPrecHcapRvecDerivative_v3opt.c Lines 119--121,\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "    {\\bf r} \\times \\dot{\\bf r} = {\\bf x} \\times \\frac{ \\partial {\\bf H}_{\\rm real} }{ {\\bf p} }\n",
+    "\\end{equation*}\n",
+    "\n",
+    "Ultimately we want the *scaled* ${\\bf r} \\times \\dot{\\bf r}$, whic we denote by ${\\bf L}_{N}$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rcrossrdot1 = y*partHpartp3 - z*partHpartp2\n",
+    "rcrossrdot2 = z*partHpartp1 - x*partHpartp3\n",
+    "rcrossrdot3 = x*partHpartp2 - y*partHpartp1\n",
+    "rcrossrdotmag = sp.sqrt(rcrossrdot1*rcrossrdot1\n",
+    "                        + rcrossrdot2*rcrossrdot2 + rcrossrdot3*rcrossrdot3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='ln'></a>\n",
+    "\n",
+    "## ${\\bf L}_{N}$ \\[Back to [top](#toc)\\]\n",
+    "$$\\label{ln}$$\n",
+    "\n",
+    "From LALSpinPrecHcapRvecDerivative_v3opt.c Lines 123--125,\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "    {\\bf L}_{N} = \\frac{ {\\bf r} \\times \\dot{\\bf r} }{ \\left\\lvert {\\bf r} \\times \\dot{\\bf r} \\right\\rvert }.\n",
+    "\\end{equation*}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LN1 = rcrossrdot1/rcrossrdotmag\n",
+    "LN2 = rcrossrdot2/rcrossrdotmag\n",
+    "LN3 = rcrossrdot3/rcrossrdotmag"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='s1dotln'></a>\n",
+    "\n",
+    "## ${\\bf S}_{1} \\cdot {\\bf L}_{N}$ \\[Back to [top](#toc)\\]\n",
+    "$$\\label{s1dotln}$$\n",
+    "\n",
+    "From LALSpinPrecHcapRvecDerivative_v3opt.c Lines 126,\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    {\\bf S}_{1} \\cdot {\\bf L}_{N} = {\\bf S}_{1}^{x} {\\bf L}_{N}^{1} + {\\bf S}_{1}^{y} {\\bf L}_{N}^{2} + {\\bf S}_{1}^{z} {\\bf L}_{N}^{3}.\n",
+    "\\end{align*}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "S1dotLN = S1x*LN1 + S1y*LN2 + S1z*LN3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='s2dotln'></a>\n",
+    "\n",
+    "## ${\\bf S}_{2} \\cdot {\\bf L}_{N}$ \\[Back to [top](#toc)\\]\n",
+    "$$\\label{s2dotln}$$\n",
+    "\n",
+    "From LALSpinPrecHcapRvecDerivative_v3opt.c Lines 127,\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    {\\bf S}_{2} \\cdot {\\bf L}_{N} = {\\bf S}_{2}^{x} {\\bf L}_{N}^{1} + {\\bf S}_{2}^{y} {\\bf L}_{N}^{2} + {\\bf S}_{2}^{z} {\\bf L}_{N}^{3}.\n",
+    "\\end{align*}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "S2dotLN = S2x*LN1 + S2y*LN2 + S2z*LN3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='chis'></a>\n",
+    "\n",
+    "## $\\chi_{\\rm S}$ \\[Back to [top](#toc)\\]\n",
+    "$$\\label{chis}$$\n",
+    "\n",
+    "From LALSpinPrecHcapRvecDerivative_v3opt.c Lines 128,\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "    \\chi_{\\rm S} = \\frac{ 1 }{ 2 } \\left( {\\bf S}_{1} \\cdot {\\bf L}_{N} + {\\bf S}_{2} \\cdot {\\bf L}_{N} \\right).\n",
+    "\\end{equation*}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "global name 's1dotLN' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-26-0dea489b6c5f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mchiS\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.5\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0ms1dotLN\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0ms2dotLN\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: global name 's1dotLN' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "chiS = 0.5 * (s1dotLN + s2dotLN)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='chia'></a>\n",
+    "\n",
+    "## $\\chi_{\\rm A}$ \\[Back to [top](#toc)\\]\n",
+    "$$\\label{chia}$$\n",
+    "\n",
+    "From LALSpinPrecHcapRvecDerivative_v3opt.c Lines 129,\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "    \\chi_{\\rm A} = \\frac{ 1 }{ 2 } \\left( {\\bf S}_{1} \\cdot {\\bf L}_{N} - {\\bf S}_{2} \\cdot {\\bf L}_{N} \\right).\n",
+    "\\end{equation*}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chiA = 0.5 * (s1dotLN - s2dotLN)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='chikerr'></a>\n",
+    "\n",
+    "## $\\chi_{\\rm Kerr}$ \\[Back to [top](#toc)\\]\n",
+    "$$\\label{chikerr}$$\n",
+    "\n",
+    "From LALSpinPrecHcapRvecDerivative_v3opt.c Lines 131 and [Taracchini, Pan, Buonanno, et. al. (2012)](https://arxiv.org/abs/1202.0790) Equation (31) (note $\\nu$ of [Taracchini, Pan, Buonanno, et. al. (2012)](https://arxiv.org/abs/1202.0790) is $\\eta$ of [BB2010](https://arxiv.org/abs/0912.3517)),\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\chi_{\\rm Kerr} &= \\left( 1 - 2 \\eta \\right) \\chi_{\\rm S} + \\sqrt{ 1 - 4 \\eta } \\chi_{\\rm A} \\\\\n",
+    "        &= \\left( 1 - 2 \\eta \\right) \\chi_{\\rm S} + \\frac{ m_{1} - m_{2} }{ m_{1} + m_{2} } \\chi_{\\rm A}\n",
+    "\\end{align*}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chiKerr = (1 - 2*eta)*chiS + (m1 - m2)/(m1 + m2)*chiA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CalcSpinPrecFacWaveformCoefficients"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='convertderiv'></a>\n",
+    "\n",
+    "## Convert derivatives \\[Back to [top](#toc)\\]\n",
+    "$$\\label{convertderiv}$$\n",
+    "\n",
+    "From LALSpinPrecHcapRvecDerivative_v3opt.c Lines 141,\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "    \\dot{\\bf r} = \\begin{bmatrix} 1 + \\frac{ x^{2} }{ r^{2} } \\left( \\xi - 1 \\right) & \\frac{ x y }{ r^{2} } \\left( \\xi - 1 \\right) & \\frac{ x z }{ r^{2} } \\left( \\xi - 1 \\right) \\\\\n",
+    "        \\frac{ x y }{ r^{2} } \\left( \\xi - 1 \\right) & 1 + \\frac{ y^{2} }{ r^{2} } \\left( \\xi - 1 \\right) & \\frac{ y z }{ r^{2} } \\left( \\xi - 1 \\right) \\\\\n",
+    "        \\frac{ x z }{ r^{2} } \\left( \\xi - 1 \\right) & \\frac{ y z }{ r^{2} } \\left( \\xi - 1 \\right) & 1 + \\frac{ z^{2} }{ r^{2} } \\left( \\xi - 1 \\right) \\end{bmatrix} \\begin{bmatrix} p_{x} \\\\ p_{y} \\\\ p_{z} \\end{bmatrix}\n",
+    "\\end{equation*}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rdot1 = toTort[0]*px + toTort[1]*py + toTort[2]*pz\n",
+    "rdot2 = toTort[3]*px + toTort[4]*py + toTort[5]*pz\n",
+    "rdot3 = toTort[6]*px + toTort[7]*py + toTort[8]*pz"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='rcrossrdot'></a>\n",
+    "\n",
+    "# ${\\bf r} \\times \\dot{\\bf r}$ \\[Back to [top](#toc)\\]\n",
+    "$$\\label{rcrossrdot}$$\n",
+    "\n",
+    "This is computed at LALSimIMRSpinPrecEOB.c Line 1379.  Note this is a bit different than our previous rendition; why?  And why are we recomputing this here?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rcrossrdot1 = y*rdot3 - z*rdot2\n",
+    "rcrossrdot2 = z*rdot1 - x*rdot3\n",
+    "rcrossrdot3 = x*rdot2 - y*rdot1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id='latex_pdf_output'></a>\n",
     "\n",
     "# Output: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
@@ -609,27 +1002,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[NbConvertApp] Converting notebook Tutorial-SEOBNR_Initial_Conditions.ipynb to latex\n",
-      "[NbConvertApp] Writing 61076 bytes to Tutorial-SEOBNR_Initial_Conditions.tex\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx Tutorial-SEOBNR_Initial_Conditions.ipynb\n",
     "!pdflatex -interaction=batchmode Tutorial-SEOBNR_Initial_Conditions.tex\n",
