Tutorial-FishboneMoncriefID: fix typo

--- a/Tutorial-FishboneMoncriefID.ipynb
+++ b/Tutorial-FishboneMoncriefID.ipynb
@@ -407,7 +407,7 @@
     "uBL4U = ixp.zerorank1(DIM=4)\n",
     "for i in range(4):\n",
     "    for j in range(4):\n",
-    "        uBL4U[i] += gPhys4BLUU[i][j]*uBL4D[j]\n"
+    "        uBL4U[i] += gPhys4BLUU[i][j]*uBL4D[j]"
    ]
   },
   {
@@ -416,7 +416,7 @@
    "source": [
     "<a id='xform_to_ks'></a>\n",
     "\n",
-    "## Step 2.g: Transform components of four-veloicty $u^\\mu$ to Kerr-Schild \\[Back to [top](#toc)\\]\n",
+    "## Step 2.g: Transform components of four-velocity $u^\\mu$ to Kerr-Schild \\[Back to [top](#toc)\\]\n",
     "$$\\label{xform_to_ks}$$\n",
     "\n",
     "Now, we will transform the 4-velocity from the Boyer-Lindquist to the Kerr-Schild basis. This algorithm is adapted from [HARM](https://github.com/atchekho/harmpi/blob/master/init.c). This definees the tensor $\\text{transformBLtoKS}$, where the diagonal elements are $1$, and the non-zero off-diagonal elements are \n",
@@ -977,7 +977,7 @@
     "                                 lhrh(lhs=gri.gfaccess(\"out_gfs\",\"IDValencia3velocityU0\"),rhs=IDValencia3velocityU[0]),\\\n",
     "                                 lhrh(lhs=gri.gfaccess(\"out_gfs\",\"IDValencia3velocityU1\"),rhs=IDValencia3velocityU[1]),\\\n",
     "                                 lhrh(lhs=gri.gfaccess(\"out_gfs\",\"IDValencia3velocityU2\"),rhs=IDValencia3velocityU[2]),\\\n",
-    "                                 ]\n"
+    "                                 ]"
    ]
   },
   {
@@ -1126,24 +1126,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook Tutorial-FishboneMoncriefID.ipynb to latex\n",
-      "[NbConvertApp] Writing 125370 bytes to Tutorial-FishboneMoncriefID.tex\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n"
+      "[NbConvertApp] Converting notebook Tutorial-FishboneMoncriefID.ipynb to latex\r\n"
      ]
     }
    ],
