SEOBNR: update initial condition documentation.

--- a/Tutorial-SEOBNR_Documentation.ipynb
+++ b/Tutorial-SEOBNR_Documentation.ipynb
@@ -170,7 +170,7 @@
     "1. spacial tensor indicies are denoted by lowercase Latin letters, and\n",
     "1. repeated indices indicate Einstein summation notation.\n",
     "\n",
-    "<font color='red'>Please note: LALSuite computes $H_{\\rm real}$ up to a constant multiple of $M$; we write the terms here as they are written in [BB2010](https://arxiv.org/abs/0912.3517) and therefore include $M$.</font>"
+    "<font color='red'>Please note: LALSuite computes $H_{\\rm real}$ up to a constant multiple; this multiple is likely either $M$ or $\\eta$.  We write the terms here as they are written in [BB2010](https://arxiv.org/abs/0912.3517) and therefore include $M$.  Note that, for example, in LALSimIMRSpinPrecEOBHcapExactDerivative.c Lines 185--192 we divide $H_{\\rm real}$ by $\\eta$ (not $M$).</font>"
    ]
   },
   {
